--- a/ok/gl/gl02-0.1.1.3.0.md
+++ b/ok/gl/gl02-0.1.1.3.0.md
@@ -16,7 +16,7 @@
 
 脾主运化的功能，不仅是脾的主要生理功能，而且，对整个人体的生命活动，至关重要。正如李中梓在《医宗必读》中说：“一有此身，必资谷气，谷入于胃，洒陈于六腑而气至，和调于五脏而血生，而人资之以为生者也，故曰后天之本在脾”。
 
-（2）脾气主升  脾气主升，是说脾具有“升清”的运动特点。升，乃上升；清，是指水谷之精微。“升清”，是指脾将水谷精微上输心肺，以化生气血，营养周身。中医学认为：脾为阴土，其气主升；胃为阳土，其性主降。脾与胃升降相因，水谷乃能腐熟运化。若脾气不升，则水谷精微不能运化，可出现腹胀泄泻等证；若脾气下陷，则可见脱肛、欠泄或阴挺等病证。
+（2）脾气主升  脾气主升，是说脾具有“升清”的运动特点。升，乃上升；清，是指水谷之精微。“升清”，是指脾将水谷精微上输心肺，以化生气血，营养周身。中医学认为：脾为阴土，其气主升；胃为阳土，其性主降。脾与胃升降相因，水谷乃能腐熟运化。若脾气不升，则水谷精微不能运化，可出现腹胀泄泻等证；若脾气下陷，则可见脱肛、久泄或阴挺等病证。
 
 （3）脾主统血  脾主统血，是说脾具有统摄血液在脉道中运行的功能。《难经·四十二难》说：“脾裹血”，是说脾可包裹血液，不使外逸，即是指脾具有统血的功能。脾对血液的统摄作用，是由脾气或脾阳来完成的。唐容川在《血证论》中说：“血之运行上下，全赖乎脾，脾阳虚，则不能统血”。沈目南在《金匮要略注》中说：“五脏六腑之血，全赖脾气统摄”。都是强调了脾阳与脾气对血的统摄作用。临证所见，若脾气健运，则气血充盈，血顺脉道而行；若脾失健运，脾气匮乏，则气对血固摄无权，从而导致出血，习惯上称为脾不统血。脾不统血常可见到便血，肌衄， 崩漏等不同症状。
 
