--- a/ok/gl/gl02-0.1.1.3.0.md
+++ b/ok/gl/gl02-0.1.1.3.0.md
@@ -56,7 +56,7 @@
 
 脾与胃同居中焦，经脉相互络属，构成表里关系。在功能上，胃主受纳，脾主运化，胃腐熟水谷，脾“行其津液”，二者密切配合，共同完成水谷的消化吸收及输布，从而滋养周身。故称脾胃为“后天之本”。
 
-脾气主升，胃气主降，升降相因，故脾胃为人体气机升降之枢纽。脾主升清，将水谷之精微上输心肺，化生气血.；胃主降浊，则水谷及其槽粕得以下行，便于消化吸收与排泄。脾升胃降，相反相成，共同完成水谷的腐熟与运化。故《临证指南医案》说：“纳食主胃，运化主脾，脾宜升则健，胃宜降则和”。
+脾气主升，胃气主降，升降相因，故脾胃为人体气机升降之枢纽。脾主升清，将水谷之精微上输心肺，化生气血；胃主降浊，则水谷及其槽粕得以下行，便于消化吸收与排泄。脾升胃降，相反相成，共同完成水谷的腐熟与运化。故《临证指南医案》说：“纳食主胃，运化主脾，脾宜升则健，胃宜降则和”。
 
 脾喜燥恶湿，胃喜润恶燥。脾为阴脏，以阳为用，脾阳健运，则能升能化，故其性喜温燥而恶寒湿。胃为阳腑，以阴为养，胃阴充足则能受纳腐熟，故其性喜润而恶燥。脾与胃，燥湿相济，阴阳相合，饮食方能消化。故《临证指南医案》说：“太阴湿土，得阳则运，阳明燥土，得阴自安，以脾喜刚燥，胃喜柔润”。
 
