--- a/ok/gl/gl02-0.1.1.4.0.md
+++ b/ok/gl/gl02-0.1.1.4.0.md
@@ -12,7 +12,7 @@
 
 一是调畅气机。气机，即气的升降出入运动，它是对脏腑功能活动形式的基本概括。由于肝具有主动、主升的功能特点，这对气机的疏通、畅达、升发，是一个重要的因素。肝的疏泄功能正常与否，直接影响着气机的调畅。如果肝的疏泄功能正常，则气机通畅，气血和调，经脉通利，各个脏腑的功能活动就正常。如果肝的疏泄功能异常，或由于肝的疏泄功能减退，而形成气机不畅、肝气郁结的病理变化，出现胸胁胀痛的病症。或由于肝的升发太过而形成肝气上逆，或肝阳上亢的病理变化，而出现头目胀痛，面红目赤，心烦易怒等病理现象。由于气的升降出入运动，直接影响到血与津液的输布与运行，故肝的疏泄功能异常，常会导致血与津液的病变。如肝气郁结，可形成血瘀、癓瘕，在妇女可导致经行不畅、痛经等症。同样，肝郁气滞，亦可产生痰、水等病理产物，出现痰核、臌胀等症状。
 
-二是促进脾胃的运化功能。肝的疏泄功能对全身的气机具有调节作用，其中，对脾胃气机升降的调节起着重要的作用。如肝的疏泄功能异常，影响脾的升清功能，则会出现腹胀、肠鸣、泄泻等症状；影响胃的降浊功能，则可出胃脘作痛，嗳气不舒，恶心呕吐的症状，临床上称为“肝木克土”。正如唐容川在《血证论》中所说：“木之性主于疏泄，食气入胃，全赖肝木之气以疏泄之，而水谷乃化。设肝之清阳不升，则不能疏泄水谷，渗泄中满之症，在所不免”。
+二是促进脾胃的运化功能。肝的疏泄功能对全身的气机具有调节作用，其中，对脾胃气机升降的调节起着重要的作用。如肝的疏泄功能异常，影响脾的升清功能，则会出现腹胀、肠鸣、泄泻等症状；影响胃的降浊功能，则可出现胃脘作痛，嗳气不舒，恶心呕吐的症状，临床上称为“肝木克土”。正如唐容川在《血证论》中所说：“木之性主于疏泄，食气入胃，全赖肝木之气以疏泄之，而水谷乃化。设肝之清阳不升，则不能疏泄水谷，渗泄中满之症，在所不免”。
 
 三是调畅情志。人的情志活动，属于心主神明的生理功能，但与肝的疏泄功能密切相关。人的精神乐观，情志舒畅，则肝的疏泄功能能得到正常发挥；情志抑郁，则能使肝的疏泄功能失常。同样，肝的疏泄功能正常，则气机调达，气血和畅，心情就易于开朗；肝的疏泄功能失常，则肝郁气滞，情志就易于波动。故有“肝喜条达而恶抑郁”的说法。肝失疏泄所引起的情志变化，在临床上常表现出抑郁与亢奋两种。若肝气郁结，多出现郁郁不乐，闷闷欲哭的症状。若肝气上逆，则出现急躁易怒，失眠多梦的症状。
 
