--- a/ok/gl/gl02-0.1.1.5.0.md
+++ b/ok/gl/gl02-0.1.1.5.0.md
@@ -28,7 +28,7 @@
 
 髮之生长，有赖于精血。肾其华在髮，是指肾精充盈，则头髮润泽。故《素问·五脏生成论》说：“肾之合骨也，其荣髮也”。髮之荣枯，固然需要肾精的充养，同时亦需血液的濡润，故有“髮为血之余”之说。由于精能化血，故精乃是头髮荣枯之关键。如若精血充沛则髮长而光泽。若精血虚衰，则髮白脱落，或枯槁无华。故临床上，常可从头髮的荣枯上，判断精血之盛衰。
 
-（2）肾开窍于耳及二阴  肾开窍于耳，是说耳的听觉能力，与肾中精气的盈亏密切相关。肾中精气充盈，则听觉灵敏，故《灵抠·脉度》说：“肾气通于耳，肾和则耳能闻五音矣”。如若肾中精气虚衰，则可见听力不敏，耳鸣耳聋的病症，故有“肾开窍于耳”的说法。在此应该指出，虽然，肾与耳密切相关，但除此之外，其它脏膀，亦与耳的听力有关。如心与耳，心主身之血脉，耳之听力正常，有赖于气血的濡养，若血脉空虚或血行不利，亦可出现听觉的失常，故《灵枢·邪气脏腑病形》有“心脉微涩为耳鸣”的记载。此外，肝、胆、胃肠及三焦之经皆行于耳，故这些脏腑的病变，亦可引起耳鸣、耳聋，临床辨证时亦应注意。
+（2）肾开窍于耳及二阴  肾开窍于耳，是说耳的听觉能力，与肾中精气的盈亏密切相关。肾中精气充盈，则听觉灵敏，故《灵枢·脉度》说：“肾气通于耳，肾和则耳能闻五音矣”。如若肾中精气虚衰，则可见听力不敏，耳鸣耳聋的病症，故有“肾开窍于耳”的说法。在此应该指出，虽然，肾与耳密切相关，但除此之外，其它脏腑，亦与耳的听力有关。如心与耳，心主身之血脉，耳之听力正常，有赖于气血的濡养，若血脉空虚或血行不利，亦可出现听觉的失常，故《灵枢·邪气脏腑病形》有“心脉微涩为耳鸣”的记载。此外，肝、胆、胃肠及三焦之经皆行于耳，故这些脏腑的病变，亦可引起耳鸣、耳聋，临床辨证时亦应注意。
 
 二阴，即前阴与后阴，前阴主排尿与生殖，后阴主排泄粪便。肾与前后二阴关系密切，故有“肾司二便”之说。尿液的排泄虽在膀胱，但须依赖肾的气化才能完成。故尿频、遗尿、尿少以及小便失禁及癃闭，均与肾的气化功能失常有关，至于人的生殖功能，亦为肾所主，已见前述，不再复赘。在此还应指出，前阴除与肾有关外，与肝、脾、胃、膀胱等脏腑均有关。其中肝经循阴器，故肝经脉气终绝，便有囊缩之证。前阴又为宗筋所聚之处，故阳痿不举之证与肝有密切关系。脾家湿热下注，亦可有疝气、癃㿉之证。胃为主谷之海，主润宗筋，若阳明虚，则不能润养宗筋，则宗筋痿软。后阴即肛门，或称魄门，其排泄粪便的功能虽为大肠所主，但亦与肾之气化有关，如肾阴不足，可使肠液枯而便秘；肾阳虚损，又可因气化无权而出现阳虚便秘或泄泻；肾失封藏，则可见久泄滑脱。此外，后阴与肺、脾、肝等脏亦相关，故《内经》称魄门为“五脏使”。其中肺与大肠相表里，若肺热则大肠不利而便秘，或生痔疮。脾胃气虚，因摄无权可见脱肛。肝失疏泄，亦可见大便燥结或痛泄等等。
 
