--- a/ok/bc/bc01-1.2.8.0.0.md
+++ b/ok/bc/bc01-1.2.8.0.0.md
@@ -2,9 +2,8 @@
 
 〔原文〕辛甘性平，轻扬升发，入阳明经。
 能鼓胃气上行，生津止渴。<small>风药多燥，葛根独能止渴者，
-以能升胃气，入肺而生津耳</small>。兼入脾经，开腠发汗、解肌退热,<small>脾主肌肉</small>。为治脾胃虚弱、泄泻之圣药。<small>经白：清气在下，则生飧(sūn)泄。葛根能升阳明清气</small>。疗伤寒中风、阳明头痛<sup></sup>（1），<small>张元素曰:头痛如破，乃阳明中风，可用葛根葱白汤；若太阳初病，未入阳明而头痛者，不可便服升葛汤发之，反引邪气入阳明也。仲景治太阳、阳明合病，桂枝汤加葛根、麻黄；又有葛根黄芩黄连解肌汤，是用以断太阳入阳明之路，非太阳药也。</small>血痢温疟，<small>丹溪曰:治疟，无汗要有汗，散邪为主，带补；有汗要无汗，扶正为主，带散。若阳疟有汗，加参、
-芪、白术以饮之，无汗，加芩、葛、苍术以发之。</small>肠风痘疹。<small>能发痘疹。丹溪曰：凡斑疹己见红点，不可更服升葛根，恐表虚反增斑烂也</small>。又
-能起阴气，散郁火，解酒毒，葛花尤良。利二便，杀百药毒。多用反伤胃气。<small>升散太过</small>。
+以能升胃气，入肺而生津耳</small>。兼入脾经，开腠发汗、解肌退热，<small>脾主肌肉</small>。为治脾胃虚弱、泄泻之圣药。<small>经曰：清气在下，则生飧(sūn)泄。葛根能升阳明清气</small>。疗伤寒中风、阳明头痛<sup></sup>（1），<small>张元素曰：头痛如破，乃阳明中风，可用葛根葱白汤；若太阳初病，未入阳明而头痛者，不可便服升葛汤发之，反引邪气入阳明也。仲景治太阳、阳明合病，桂枝汤加葛根、麻黄；又有葛根黄芩黄连解肌汤，是用以断太阳入阳明之路，非太阳药也。</small>血痢温疟，<small>丹溪曰：治疟，无汗要有汗，散邪为主，带补；有汗要无汗，扶正为主，带散。若阳疟有汗，加参、
+芪、白术以饮之；无汗，加芩、葛、苍术以发之。</small>肠风痘疹。<small>能发痘疹。丹溪曰：凡斑疹己见红点，不可更服升葛根，恐表虚反增斑烂也</small>。又能起阴气，散郁火，解酒毒，葛花尤良。利二便，杀百药毒。多用反伤胃气。<small>升散太过</small>。
 
 生葛汁，大寒。解温病大热，吐衄诸血。
 
