--- a/ok/bc/bc01-1.2.9.0.0.md
+++ b/ok/bc/bc01-1.2.9.0.0.md
@@ -1,6 +1,6 @@
 ### 柴胡
 
-【原文】苦平微寒，味薄气升为阳。主阳气下陷，引清气上行，而平少阳、厥阴之邪热。<small>肝、胆、心包、三焦、相火。时珍曰，行少阳，黄芩为佐，行厥阴，黄连为佐。</small>宣畅气血，散结调经，<small>昂按：人第知柴胡能发表，而不知柴胡最能和里，故劳药、血药往往用之。补中益气汤、逍遥散皆用柴胡，取其和中，皆非解表也</small>。为足少阳<small>胆</small>。表药。<small>胆为清净之府，无出无入，其经在半表半里、法当和解，小柴胡汤之属是也。若病在太阳，服之太早，则引贼入门；若病入阴经，复服柴胡，则重虚其表，最宜详慎</small>。 治伤寒邪热，<small>仲景有大小柴胡等汤</small>。痰热结实，虚劳肌热，<small>寇宗奭曰：柴胡《本经》并无一字治劳。《药性论》、《曰华子》皆言补劳伤。医家执而用之，贻误无穷。时珍曰：劳有五。若劳在肝、胆、心、心包有热，则柴胡乃手足厥阴、少阳必用之药；劳在脾胃有热，或阳气下陷，则柴胡为升清退热必用之药。性劳在肺肾者，不可用耳。寇氏一概摈斥，殊非通论。昂按：杨氏秦艽扶羸汤，治肺痿成劳，咳嗽声嗄，体虚自汗，用柴胡为君，则肺劳亦有用之者矣。《药性论》，甄权著</small>。呕吐心烦，<small>邪在半表半里，则多呕吐</small>。诸疟寒热 ，<small>李东垣曰：诸疟以柴胡为君，佐以引经之药。李士材曰：疟非少阳经慎用。俞嘉言曰：疟发必有寒有热。盖外邪伏于半表半里，适在少阳所主之界，入与阴争，阳胜则热；出与阳争，阴胜则寒。即纯热无寒为瘅疟、温疟；纯寒无热为牝疟；要皆自少阳而造其极偏，补偏救弊，亦必返还少阳之界，使阴阳协和而后愈也。谓少阴而兼他经则有之；谓他经而不涉少阳，则不成其为疟矣。脉纵屡迁，而弦之一字，实贯彻之也。昂按：疟之不离少阳，犹咳之不离于肺也。谈薮（suo）云:张知阁久病疟，热时如火，年余骨立。医用茸、附诸药，热益甚。孙琳投以小柴胡汤，三服脱然，琳曰：此名劳疟，热从髓出，加以刚剂，气血愈亏。热有在皮肤、在脏腑、在骨髓。在骨髓者，非柴胡不可。若得银柴胡，只须一服。南方者力减，故三服乃效也。时珍曰：观此则得用药之妙的矣。昂按，据孙氏之说，是柴胡亦能退骨蒸也</small>。头眩目赤，胸痞胁痛<sup>(1)</sup>，<small>凡胁痛、多是肝木有余，宜小柴胡汤加青皮，川芎、白芍。又左胁痛，宜活血行气;右胁痛、宜消食行痰</small>。口苦耳聋，<small>皆肝胆之邪</small>。妇人热入血室<sup>（2）</sup>，<small>冲为血海，即血室也，男女皆有之。柴胡在脏主血，在经主气</small>。
+【原文】苦平微寒，味薄气升为阳。主阳气下陷，引清气上行，而平少阳、厥阴之邪热。<small>肝、胆、心包、三焦、相火。时珍曰:行少阳，黄芩为佐，行厥阴，黄连为佐。</small>宣畅气血，散结调经，<small>昂按：人第知柴胡能发表，而不知柴胡最能和里，故劳药、血药往往用之。补中益气汤、逍遥散皆用柴胡，取其和中，皆非解表也</small>。为足少阳<small>胆</small>。表药。<small>胆为清净之府，无出无入，其经在半表半里、法当和解，小柴胡汤之属是也。若病在太阳，服之太早，则引贼入门；若病入阴经，复服柴胡，则重虚其表，最宜详慎</small>。 治伤寒邪热，<small>仲景有大小柴胡等汤</small>。痰热结实，虚劳肌热，<small>寇宗奭曰：柴胡《本经》并无一字治劳。《药性论》、《曰华子》皆言补劳伤。医家执而用之，贻误无穷。时珍曰：劳有五。若劳在肝、胆、心、心包有热，则柴胡乃手足厥阴、少阳必用之药；劳在脾胃有热，或阳气下陷，则柴胡为升清退热必用之药。性劳在肺肾者，不可用耳。寇氏一概摈斥，殊非通论。昂按：杨氏秦艽扶羸汤，治肺痿成劳，咳嗽声嗄，体虚自汗，用柴胡为君，则肺劳亦有用之者矣。《药性论》，甄权著</small>。呕吐心烦，<small>邪在半表半里，则多呕吐</small>。诸疟寒热 ，<small>李东垣曰：诸疟以柴胡为君，佐以引经之药。李士材曰：疟非少阳经慎用。俞嘉言曰：疟发必有寒有热。盖外邪伏于半表半里，适在少阳所主之界，入与阴争，阳胜则热；出与阳争，阴胜则寒。即纯热无寒为瘅疟、温疟；纯寒无热为牝疟；要皆自少阳而造其极偏，补偏救弊，亦必返还少阳之界，使阴阳协和而后愈也。谓少阴而兼他经则有之；谓他经而不涉少阳，则不成其为疟矣。脉纵屡迁，而弦之一字，实贯彻之也。昂按：疟之不离少阳，犹咳之不离于肺也。谈薮（suo）云:张知阁久病疟，热时如火，年余骨立。医用茸、附诸药，热益甚。孙琳投以小柴胡汤，三服脱然，琳曰：此名劳疟，热从髓出，加以刚剂，气血愈亏。热有在皮肤、在脏腑、在骨髓。在骨髓者，非柴胡不可。若得银柴胡，只须一服。南方者力减，故三服乃效也。时珍曰：观此则得用药之妙的矣。昂按，据孙氏之说，是柴胡亦能退骨蒸也</small>。头眩目赤，胸痞胁痛<sup>(1)</sup>，<small>凡胁痛、多是肝木有余，宜小柴胡汤加青皮，川芎、白芍。又左胁痛，宜活血行气;右胁痛、宜消食行痰</small>。口苦耳聋，<small>皆肝胆之邪</small>。妇人热入血室<sup>（2）</sup>，<small>冲为血海，即血室也，男女皆有之。柴胡在脏主血，在经主气</small>。
 胎前产后诸热，小儿痘疹，五疳羸热<sup>（3）</sup>，散十二经疮疽、血凝气聚，功同连翘。<small>连翘治血热，柴胡治气热，为少异</small>。阴虚，火炎气升者禁用。银州者，根长尺余，微白，治劳疳良。北产者，如前胡而软者良；南产者、强硬不堪用。外感生用，内伤升气，酒炒用根；中节下降用梢：有汗咳者蜜水炒。前胡、半夏为使，恶皂角。
 
 【讲解】（1）胸痞：证名。胸中满闷而不痛者称为胸痞。（2）血室：历代医家对血室有不同认识。一般有三种看法:一指冲脉，二指肝脏，三指子宫。现多指第三种说法。（3）五疳：疳，病名。泛指小儿因多种慢性疾病所致形体干瘦，津液干枯燥之证。五疳是以五脏分类命名的疳证，即心疳、肝疳、脾疳、肺疳、肾疳五类。
