--- a/ok/gl/gl02-0.1.1.6.0.md
+++ b/ok/gl/gl02-0.1.1.6.0.md
@@ -14,6 +14,6 @@
 
 上焦如雾：上焦主要包括心肺两脏，主要有宣发，敷布，使水谷精微、卫气布散全身的作用。故《灵枢·决气》说：“上焦开发、宣五谷味，熏肤充身泽毛，若雾露之溉”。《灵枢·营卫生会》将其概括为“上焦如雾”。
 
-中焦如沤：中焦主要包括脾胃两脏。脾与胃主受纳、腐熟水谷，有运化水谷精微的生理作用，这一腐熟运化水谷的状态，犹如沤化发酵水谷，泌其糟粕，升共精华。故《灵枢·营卫生会》将其概括为“中焦如沤”。
+中焦如沤：中焦主要包括脾胃两脏。脾与胃主受纳、腐熟水谷，有运化水谷精微的生理作用，这一腐熟运化水谷的状态，犹如沤化发酵水谷，泌其糟粕，升其精华。故《灵枢·营卫生会》将其概括为“中焦如沤”。
 
 下焦如渎：下焦主要包括肾、膀胱与大、小肠等脏腑。这些脏腑具有泌别清浊，排泄水液与糟粕的作用。此种排泄水液糟粕状态，犹如水沟排水一般，故《灵枢·营卫生会》说：“下焦如渎”。
