--- a/ok/gl/gl02-0.2.1.0.0.md
+++ b/ok/gl/gl02-0.2.1.0.0.md
@@ -48,7 +48,7 @@
 
 ##### 2.宗气
 
-宗气，又称“大气”，由肺吸入的清气与脾胃化生的水谷之精气结合而成。宗气聚积于胸中，走息道以行呼吸，贯心脉以行气血。故《灵枢·邪客》说：“宗气积于胸中，出于喉咙，以贯心脉，而行呼吸焉”。《素问·平人气象论》说：“胃之大络，名日虚里，贯膈络肺出于左乳下，其动应衣。脉宗气也。盛喘数绝者，则病在中；结而横，有积矣；绝不至，曰死。乳之下，其动应衣，宗气泄也”。其意思说：虚里微动，是胃气之常象；虚里大动应衣，是中虚之危候。说明宗气与心之搏动有关，具有贯心脉行血的作用，故临床上常可在“虚里”处，来测知宗气的盛衰。
+宗气，又称“大气”，由肺吸入的清气与脾胃化生的水谷之精气结合而成。宗气聚积于胸中，走息道以行呼吸，贯心脉以行气血。故《灵枢·邪客》说：“宗气积于胸中，出于喉咙，以贯心脉，而行呼吸焉”。《素问·平人气象论》说：“胃之大络，名曰虚里，贯膈络肺出于左乳下，其动应衣。脉宗气也。盛喘数绝者，则病在中；结而横，有积矣；绝不至，曰死。乳之下，其动应衣，宗气泄也”。其意思说：虚里微动，是胃气之常象；虚里大动应衣，是中虚之危候。说明宗气与心之搏动有关，具有贯心脉行血的作用，故临床上常可在“虚里”处，来测知宗气的盛衰。
 
 ##### 3.营气
 
