update ok/gl/gl02-0.2.7.0.0.md. 纸质书也有上字

--- a/ok/gl/gl02-0.2.7.0.0.md
+++ b/ok/gl/gl02-0.2.7.0.0.md
@@ -18,7 +18,7 @@
 
 气和津液的关系，与气血关系相近。气对津液的生成、输布和排泄，起到了气化、温煦、推动与固摄的作用，而气在体内的存在，又需依附于津液。
 
-（1）气能生津  津液的生成，有赖于脾胃化生的水谷精气。故脾胃之气健旺，则津液生化有源；脾胃气衰，则津液不足，临床可上见气津两伤之证。
+（1）气能生津  津液的生成，有赖于脾胃化生的水谷精气。故脾胃之气健旺，则津液生化有源；脾胃气衰，则津液不足，临床可见气津两伤之证。
 
 （2） 气能行津  津液在体内的输布以及化为汗、尿的排泄，全赖气的升降出入运动，由于脾的运化水湿，肺的宣发肃降，肾的蒸腾化气，才能保证津液的正常代谢。如若气的升降出入失常，则津液的输布与排泄亦随之受阻，而出现水湿的停聚，临床上称之为“气不行水”或“气不化水”。反之，由于水湿的停滞，亦可造成气机的不畅，于临床上常称为“水停气滞”，二者常互为因果，从而形成水湿、痰饮等疾患。
 
