--- a/ok/rm/rm04.md
+++ b/ok/rm/rm04.md
@@ -19,7 +19,13 @@
 >
 > 《黄帝内经讲解-寿夭与先后天的关系》
 
-形体变化一般延后于气血变化。气血失衡一段时间后，形体上会有可见的异常变化。气血恢复平衡一段时间后，异常的形体变化才会开始趋向正常。这与温室花园里的环境失衡后，花草会逐渐枯萎；环境恢复平衡后，花草需要一段时间才能长好，是一个道理。
+如果气血供应量超过形体的正常需求，则人精力旺盛、活泼好动。如果气血低于形体的需求，则人精力不足、身体沉重。因此，人一旦出四肢体沉重的现象，就要注意补充气血、疏通经络。
+
+> **四肢才觉重滞，即导引、吐纳、针灸、膏摩，勿令九窍闭塞；**
+>
+> 《金匮要略讲解-脏腑经络先后病脉证第一》
+
+形体外形变化一般延后于气血变化。气血失衡一段时间后，形体上会有可见的异常改变。气血恢复平衡一段时间后，异常的形体变化才会开始趋向正常。这与温室花园里的环境失衡后，花草会逐渐枯萎；环境恢复平衡后，花草需要一段时间才能长好，是一个道理。
 
 中医讨论的疾病大部分在这个环节，即气血充养形体、脏腑过程中遇到的问题。以后在学习《伤寒论》、《金匮要略》、《温病条辨》的时候会探讨人体各个部位（皮肉筋骨脉、头项胸腹肩背腰、四肢关节、脏腑经络）的正（元气、宗气、营卫气、津、血）虚和邪（风热暑湿燥寒、痰饮、淤血）实问题。了解这些问题的外在表现，及如何判断与治疗。
 
