--- a/ok/rm/rm03-0.2.0.0.0.md
+++ b/ok/rm/rm03-0.2.0.0.0.md
@@ -220,7 +220,7 @@
 
 再如肾负责净水、运水功能。如果肾阳不足，此功能受损，水在胃、头、肌肉、腿等部位停蓄，造成胃脘部悸动、头眩、身上肌肉跳动、站立不稳、小便不正常、肢体浮肿等症状，可以用真武汤。
 
-再如膀胱有蒸发水液上升的功能，如果受到干扰，此功能失常，可使膀胱水液停留，人出现异常的渴，喝水不解渴，且小便不正常的症状，可以使用五苓散等方剂。
+再如膀胱有蒸发水液上升的功能，如果受到干扰，此功能失常，可使膀胱水液停留，人出现异常的渴，喝水不解渴，且小便不正常的症状，可以使用五苓散、猪苓汤等方剂。
 
 > **若脉浮，小便不利，微热，消渴(2)者，五苓散(3)主之。[71]**...
 >
