--- a/ok/gl/gl02.md
+++ b/ok/gl/gl02.md
@@ -8,7 +8,7 @@
 
 [目的要求] 
 
-1.掌握藏象的概念；五脏六腑、奇恒之腑的生理特点；五脏、六腑各自主要的生理功能。
+1.掌握藏象的概念；五脏、六腑、奇恒之腑的生理特点；五脏、六腑各自主要的生理功能。
 
 2.熟悉脏与脏、脏与腑、腑与腑之间的相互关系；五脏与五志、五液、五体、五华、九窍的相互关系；脑、女子胞的主要生理功能。
 
