update ok/bc/bc05-0.0.1.0.0.md. "赤者入心，小肠气分"改为“赤者入心、小肠气分”

--- a/ok/bc/bc05-0.0.1.0.0.md
+++ b/ok/bc/bc05-0.0.1.0.0.md
@@ -2,7 +2,7 @@
 
 〔原文〕**甘温。益脾助阳，淡渗利窍除湿。色白入肺泻热，而下通膀胱。**<small>能通心气于肾，使热从小便出，然必其上行入肺，清其化源，而后能下降利水也。</small>**宁心益气，调营理卫，安魄安魂。**<small>营主血，卫主气，肺藏魄，肝藏魂。</small>**治忧恚惊悸，**<small>心肝不足。</small>**心下结痛，寒热烦满，口焦舌干，**<small>口为脾窍，舌为心苗。火下降则热除。</small>**咳逆**<small>肺火。</small>**呕哕，**<small>胃火。</small>**膈中痰水，**<small>脾虚。</small>**水肿淋沥，泄泻**<small>渗湿。</small>**遗精。**<small>益心肾。若虚寒遗溺泄精者，又当用温热之剂峻补其下，忌用茯苓淡渗之药。</small>**小便结者能通，多者能止。**<small>湿除则便自止。</small>**生津止渴，**<small>湿热去则津生。</small>**退热安胎。松根灵气结成，以大块坚白者良。去皮，乳拌蒸，多拌良。**
 
-**白者入肺、膀胱气分，赤者入心，小肠气分，**<small>时珍曰：白入气，赤入血。</small>**补心脾白胜，利湿热赤胜。恶白蔹，畏地榆、秦艽、龟甲、雄黄，忌醋。**
+**白者入肺、膀胱气分，赤者入心、小肠气分，**<small>时珍曰：白入气，赤入血。</small>**补心脾白胜，利湿热赤胜。恶白蔹，畏地榆、秦艽、龟甲、雄黄，忌醋。**
 
 **皮专能行水，治水肿肤胀。**<small>以皮行皮之义，五皮散用之。凡肿而烦渴，便秘溺赤，属阳水，宜五皮饮、疏凿饮；不烦渴，大便溏，小便数，属阴水，宜实脾饮、流气饮。腰以上肿宜汗，腰以下肿宜利小便。</small>
 
