--- a/ok/gl/gl02-0.1.1.1.0.md
+++ b/ok/gl/gl02-0.1.1.1.0.md
@@ -6,7 +6,7 @@
 
 〔心的主要生理功能〕
 
-（1）心主血脉  心主血脉，包括主血和主脉两个方面：一身之血，均在脉中运行，这依赖心阳的温煦与心气的推动，方可周流不息，濡养全身。故《素问·五脏生成篇》说：“诸血者，皆属于心”。脉，即血脉，为血之府。脉是气血运行的通道，脉道的通利与否，直接影响血液的正常运行，故《灵枢·决气》说：“壅遏营气，令无所避，是谓脉”。中医学认为：心气充沛，血液才能在脉内正常地运行，周流不息，营养全身，而见面色红润光泽，脉象和缓有力。同时营血充盈，亦是血液正常运行的基础，如血虚营亏，则见脉细涩无力。故营血的正常运行，必以心气充沛，营血充盈为其基本前提。如心气不足，血虚营亏，则脉道不利，血不畅，外见面色无华，脉细无力等症，甚至可呈面色灰暗，唇舌青紫，胸痛如刺等气血瘀滞的证候。
+（1）心主血脉  心主血脉，包括主血和主脉两个方面：一身之血，均在脉中运行，这依赖心阳的温煦与心气的推动，方可周流不息，濡养全身。故《素问·五脏生成篇》说：“诸血者，皆属于心”。脉，即血脉，为血之府。脉是气血运行的通道，脉道的通利与否，直接影响血液的正常运行，故《灵枢·决气》说：“壅遏营气，令无所避，是谓脉”。中医学认为：心气充沛，血液才能在脉内正常地运行，周流不息，营养全身，而见面色红润光泽，脉象和缓有力。同时营血充盈，亦是血液正常运行的基础，如血虚营亏，则见脉细涩无力。故营血的正常运行，必以心气充沛，营血充盈为其基本前提。如心气不足，血虚营亏，则脉道不利，血流不畅，外见面色无华，脉细无力等症，甚至可呈面色灰暗，唇舌青紫，胸痛如刺等气血瘀滞的证候。
 
 （2）心主神明  心主神明，又称为心藏神。在中医学中，神有广义，狭义之分。广义的神，是指整个人体生命活动的外在表现，是对人体生命活动现象的总称。它的物质基础是精与气。正如《灵枢·本神》说：“两精相搏谓之神”，《灵枢·平人绝谷》说，“故神者，水谷之精气也”。都是说明神来源于精与气。广义的神在人体生命活动中至关重要。《素问·移精变气论》说：“得神者昌，失神者亡”，就突出强调了它的重要性。
 
