--- a/ok/gl/gl02-0.1.1.2.0.md
+++ b/ok/gl/gl02-0.1.1.2.0.md
@@ -30,7 +30,7 @@
 
 （2）开窍于鼻，在液为涕  鼻是气体出入的通道，与肺相联，为呼吸之门户，故称“鼻为肺之窍”。鼻的嗅觉作用，有赖于肺气和，呼吸利，故《灵枢·脉度》说：“肺气通于鼻，肺和则鼻能知臭香矣”。正由于鼻为肺窍，所以肺有病变，则可见鼻塞、流涕，嗅觉异常等症。而外邪袭肺，亦多从口鼻而入。
 
-涕为鼻内的粘液，有润泽鼻窍之功。鼻为肺窍，涕为肺之液。若肺部有疾，则鼻窍不利，涕液失常，如肺寒则鼻流清涕，肺热则鼻涕黄浊，肺燥则鼻乾少涕等等。
+涕为鼻内的粘液，有润泽鼻窍之功。鼻为肺窍，涕为肺之液。若肺部有疾，则鼻窍不利，涕液失常，如肺寒则鼻流清涕，肺热则鼻涕黄浊，肺燥则鼻干少涕等等。
 
 （3）喉为肺之门  咽喉是呼吸的门户，又主发音。喉为肺系，肺之经脉循喉咙，故喉的通气与发声功能均与肺有关。肺主气，而声由气发，故前人有“肺为声音之门”的说法，若肺气充足，则喉的功能正常，而声音洪亮；若肺气虚弱，则声音低微；若肺气闭塞，则可出现声音嘶哑或失音的病症。
 
