--- a/ok/gl/gl03-0.2.2.0.0.md
+++ b/ok/gl/gl03-0.2.2.0.0.md
@@ -6,6 +6,6 @@
 
 2.走向和交接规律
 
-手三阴经，从胸走手；手三阳经，从手走头；足三阳经，从头走足；足三阴经，从足走腹。手足三阳经交接于头；手足三阴经交接于胸腹；手三阴三阳经交接于手；足三阴三阳经交接于足。如此，十二经脉形成一个“阳相相贯，如环无端”（《灵枢·营卫生会》）的循环经路，见图4手足三阴三阳经走向与交接示意图。
+手三阴经，从胸走手；手三阳经，从手走头；足三阳经，从头走足；足三阴经，从足走腹。手足三阳经交接于头；手足三阴经交接于胸腹；手三阴三阳经交接于手；足三阴三阳经交接于足。如此，十二经脉形成一个“阴阳相贯，如环无端”（《灵枢·营卫生会》）的循环经路，见图4手足三阴三阳经走向与交接示意图。
 
 ![](img/3图4.png)
