update ok/gl/gl07-0.2.1.7.0.md. 修改错字赢改为羸

--- a/ok/gl/gl07-0.2.1.7.0.md
+++ b/ok/gl/gl07-0.2.1.7.0.md
@@ -18,4 +18,4 @@
 
 3.补法的注意事项
 
-运用补法，要注意脾胃功能，因补益药大多滋腻，易于壅中滞气，如脾胃功能低下或久服补益剂，可加入理气醒脾药白蔻、[砂仁](https://www.gmzyjc.com/read/bc/bc04-0.0.4.0.0.md)、[木香](https://www.gmzyjc.com/read/bc/bc11-0.0.5.0.0.md)、[枳壳](https://www.gmzyjc.com/read/bc/bc11-0.0.3.0.0.md)、[陈皮](https://www.gmzyjc.com/read/bc/bc11-0.0.1.0.0.md)等，达到补而不滞的目的；不能滥用补法，如大实有赢状，或邪盛而正未虚者，应以祛邪为主，以免”误补益疾”；补法虽可扶正祛邪，但如果在邪势正盛之时，纵然有虚象，也不能拘于此法，应以祛邪为主，或攻补兼施，邪去则正气自安，否则就会因补而致留邪之弊；根据血气同源，气为血之帅，血由气生，阴阳互根的原理，分别主次而配合使用补气、补血、补阴、补阳之法。
+运用补法，要注意脾胃功能，因补益药大多滋腻，易于壅中滞气，如脾胃功能低下或久服补益剂，可加入理气醒脾药白蔻、[砂仁](https://www.gmzyjc.com/read/bc/bc04-0.0.4.0.0.md)、[木香](https://www.gmzyjc.com/read/bc/bc11-0.0.5.0.0.md)、[枳壳](https://www.gmzyjc.com/read/bc/bc11-0.0.3.0.0.md)、[陈皮](https://www.gmzyjc.com/read/bc/bc11-0.0.1.0.0.md)等，达到补而不滞的目的；不能滥用补法，如大实有羸状，或邪盛而正未虚者，应以祛邪为主，以免”误补益疾”；补法虽可扶正祛邪，但如果在邪势正盛之时，纵然有虚象，也不能拘于此法，应以祛邪为主，或攻补兼施，邪去则正气自安，否则就会因补而致留邪之弊；根据血气同源，气为血之帅，血由气生，阴阳互根的原理，分别主次而配合使用补气、补血、补阴、补阳之法。
