update ok/gl/gl07-0.2.1.9.0.md. 缺少一个字，决改为解决

--- a/ok/gl/gl07-0.2.1.9.0.md
+++ b/ok/gl/gl07-0.2.1.9.0.md
@@ -1,6 +1,6 @@
 #### （九）  八法的配合使用
 
-以上介绍了汗、吐、下、和、温、清、补、消八法，但疾病的表现是错综复杂、变化多端的，单纯使用某一治法，有时不能决问题，只有懂得八法的相互配合运用，才能适应病情的变化。现简要举例如下：
+以上介绍了汗、吐、下、和、温、清、补、消八法，但疾病的表现是错综复杂、变化多端的，单纯使用某一治法，有时不能解决问题，只有懂得八法的相互配合运用，才能适应病情的变化。现简要举例如下：
 
 1、汗下并用
 
