--- a/ok/gl/gl07-0.2.2.0.0.md
+++ b/ok/gl/gl07-0.2.2.0.0.md
@@ -4,13 +4,13 @@
 
 祖国医学在很早以前就采用外治法，如《礼记》所说”头有疮则沐，身有疡则浴”，便可证实。外治法不但可以配合内服药物疗法来提高疗效，而且有许多疾病，是只需专用外治就可达到治疗目的的。又如婴儿或不能服药的某些疾病，更是外治法的治疗对象。还有病起仓卒，生死存亡于一刻之际，非内服药所能急切图功的，则尤非外治法不可。外治法的运用，也同内治法一样，须”先求其本。……判上中下三焦，五脏六腑，表里寒热虚实”（《理瀹骈文》）。根据外治法的特点来归纳其类型，大体上可分为两种，即：采用药物的外治法，采用手法和配合器械的外治法。本节仅对采用药物的外治法作一般性介绍，至于采用手法和配合器械的外治法、以及专科疾病的特殊外治外，将在外科学、伤科学、针灸学等学科中作系统专门介绍，此不一一赘述。
 
-药物的外治法，是利用药物和人体接触，直达病处，并且借冷热温度的刺激，摩擦熏熨的帮助等，发挥其药物的作用，达到治疗的目的。如
+药物的外治法，是利用药物和人体接触，直达病处，并且借冷热温度的刺激，摩擦熏熨的帮助等，发挥其药物的作用，达到治疗的目的。如：
 
 #### 1. 熏蒸法
 
 熏蒸法是利用烟或蒸气来熏蒸人体肌表的外治法。烟从火生，借其温暖之气，故能畅达气血，拔引郁毒。蒸气以其轻清，借其氤氲之气，能直透腠理，具有温通经络，疏启汗孔，及解毒、除痛、止痒等作用。如《伤寒论》中即有”阳气怫郁在表，当解之熏之”的记载。
 
-烟熏法：全身熏者，如《千金方》中治妇人患癖，用松脂、[雄黄](https://www.gmzyjc.com/read/bc/bc20-0.1.0.0.0.md)，夜临以熏笼中烧着，令病人取自身其上，以被自复，惟出头，以熏之，局部熏者，如《喉科指掌》治疗喉风牙关紧闭不开者，用[巴豆](https://www.gmzyjc.com/read/bc/bc02-0.3.5.0.0.md)油于纸上，取油纸捻成条，点火燃着后再吹熄，以其烟熏入鼻中，可使口鼻涎流，牙关自开。熏于病发所在者，如用药艾条熏顽癣之类。
+烟熏法：全身熏者，如《千金方》中治妇人患癖，用松脂、[雄黄](https://www.gmzyjc.com/read/bc/bc20-0.1.0.0.0.md)，夜临以熏笼中烧着，令病人取自身其上，以被自复，惟出头，以熏之。局部熏者，如《喉科指掌》治疗喉风牙关紧闭不开者，用[巴豆](https://www.gmzyjc.com/read/bc/bc02-0.3.5.0.0.md)油于纸上，取油纸捻成条，点火燃着后再吹熄，以其烟熏入鼻中，可使口鼻涎流，牙关自开。熏于病发所在者，如用药艾条熏顽癣之类。
 
 蒸气熏法：全身熏者，如《䱐溪外治选方》，用[甘草](https://www.gmzyjc.com/read/bc/bc17-0.1.8.0.0.md)、[威灵仙](https://www.gmzyjc.com/read/bc/bc06-0.0.2.0.0.md)煎水入缸中，缸内置小櫈出水面，人蹲櫈上，上用布围住，只露头面而熏蒸，治一切风湿症。局部熏者，如《千金方》治阴癣，用狼牙水煎，熏下体等。
 
