--- a/ok/yk/yk0zl01-1.1.0.0.0.md
+++ b/ok/yk/yk0zl01-1.1.0.0.0.md
@@ -6,9 +6,7 @@
 
 随着人们长期的生活和医疗实践，逐渐发现并记载了某些动、植物及矿物有治疗眼病的作用。如先秦古地理著作《山海经》中记录药物100多种，其中治疗眼病的药物就有7种。如䔄草，《山海经•中山经》曰：“泰室之山，……有草焉，其状如𦬸，白华黑实，泽如蘡薁，其名曰䔄草，服之不昧。”既对其形态作了描述，又介绍了治疗作用。除《山海经》外，《诗经》、《淮南子》等古籍书中也载有若干医治眼病的药物。
 
-至春秋时期，已将盲人称为瞽人，如《书经》记载有“瞽奏鼓”。《诗经》记载有“矇瞍奏公”。据《毛传》称：“有眸子而无见曰矇，无
-
-眸子曰瞍。”这又将盲目分成了两类。
+至春秋时期，已将盲人称为瞽人，如《书经》记载有“瞽奏鼓”。《诗经》记载有“矇瞍奏公”。据《毛传》称：“有眸子而无见曰矇，无眸子曰瞍。”这又将盲目分成了两类。
 
 关于重瞳症，早在战国后期的著作《荀子•非相》中，就有“尧舜参眸子”之说。至汉代，《史记•项羽本纪》亦有“项羽重瞳子”的记载。这是世界上关于瞳孔异常的最早记载。
 
