update ok/fjx/fjx05-0.1.0.0.0.md. 理中丸第12行，“宋代陈自明《妇人良方》名人参中汤”，添加“理”字

--- a/ok/fjx/fjx05-0.1.0.0.0.md
+++ b/ok/fjx/fjx05-0.1.0.0.0.md
@@ -18,7 +18,7 @@
 
 脾胃属土，职司运化，若脾胃阳虚有寒，则运化无权，清浊升降之机受阻，吐利腹痛等证随之而起。采用本方，温运中焦，补益脾胃，则中土有权，升降复常，诸证自愈。然理中丸以蜜为丸，属于缓调之剂，宜于病情较轻、病程较长者：若病情较急，宜改丸为汤以收速效，所以方后有丸不及汤之语。
 
-本方在《金匮要略》中名人参汤。唐代孙思邈《备急千金要方》名治中汤。宋代陈自明《妇人良方》名人参中汤。
+本方在《金匮要略》中名人参汤。唐代孙思邈《备急千金要方》名治中汤。宋代陈自明《妇人良方》名人参理中汤。
 
 〔使用注意〕本方药性偏于温燥，故湿热内盛，阴虚内热者忌用。
 
