update ok/fjx/fjx05-0.3.0.0.0.md. 下数第14行 3.白通汤描述”（而）色赤、下利、脉微等症“改而为面。

--- a/ok/fjx/fjx05-0.3.0.0.0.md
+++ b/ok/fjx/fjx05-0.3.0.0.0.md
@@ -18,7 +18,7 @@
 
 3．白通汤
 
-葱白四茎（四根） 干姜一两（15克） 附子一枚（15克）上三味，以水三升，煮取一升，去滓，分温再服。本方具有破阴回阳，宣通内外之功效。主治阴盛于下，迫虚阳于上之戴阳证。症见但欲寐，手足厥冷，而色赤、下利、脉微等症。
+葱白四茎（四根） 干姜一两（15克） 附子一枚（15克）上三味，以水三升，煮取一升，去滓，分温再服。本方具有破阴回阳，宣通内外之功效。主治阴盛于下，迫虚阳于上之戴阳证。症见但欲寐，手足厥冷，面色赤、下利、脉微等症。
 
 4．白通加猪胆汁汤
 
