update ok/hk/hk0zl01-1.0.0.0.0.md. 《难经•四十二难》，中间加了点。 74〜76 1/2卷咽喉门中的1/2 改成½  74〜76½卷咽喉门，76½〜77卷口舌门

--- a/ok/hk/hk0zl01-1.0.0.0.0.md
+++ b/ok/hk/hk0zl01-1.0.0.0.0.md
@@ -14,7 +14,7 @@
 
 写成于同一时代的《内经》，以医学专业文献姿态出现，当然对咽喉病讲得更详细了。如嗌痛、咽肿、嗌肿、嗌干、喉痹、喉塞、瘖、口糜、口疮、口喎唇胗、重舌、齿痛、龋齿等十多个病种。此外，还有许多生理、病理的论说，非但很丰富，而且至今中医学术完全根据它来发展和推进。如其说《内经》是中医理论方面的泉源，那末写成于同一时代的《神农本草经》是给我们治疗方面的钥匙。且看该书中治疗喉科疾病的药物，基本上粗具规模了。如止哽噎的有蝼蛄，治喉舌肿的有络石，治龈肿的有郁李仁，还有通利九窍的有菖蒲、细辛、石钟乳、黑芝麻、空青、白青、蔓荆子、孔公蘖、通草、蜚蝱等。这些通利九窍的药物，治疗口腔咽喉病当然在内了。
 
-《史记•老庄申韩列传》：“（韩）非，为人口吃”。这是最早认识到习惯性言语缺陷的记载。《史记•刺客列传》：“豫让又漆身为厉，吞炭为哑”。可知当时已有为了化装而把喉音伪装嘶哑的技术。《难经四十二难》：“咽门重十两，广二寸半，至胃，长一尺六寸。喉咙重十二两，广二寸，九节。口广二寸半，唇至齿长九分。齿以后至会厌深三寸半，大容五合。舌重十两，长七寸，广二寸半”。这是中国最早的咽喉、口腔的解剖，也可能是全世界的最早者。
+《史记•老庄申韩列传》：“（韩）非，为人口吃”。这是最早认识到习惯性言语缺陷的记载。《史记•刺客列传》：“豫让又漆身为厉，吞炭为哑”。可知当时已有为了化装而把喉音伪装嘶哑的技术。《难经•四十二难》：“咽门重十两，广二寸半，至胃，长一尺六寸。喉咙重十二两，广二寸，九节。口广二寸半，唇至齿长九分。齿以后至会厌深三寸半，大容五合。舌重十两，长七寸，广二寸半”。这是中国最早的咽喉、口腔的解剖，也可能是全世界的最早者。
 
 ## 三、秦至三国时代（公元前221年〜公元280年）
 
@@ -34,7 +34,7 @@
 
 ## 六、明、清时代至解放前夕（公元1368年〜1949年）
 
-《明史•百官志》：“大医院掌医疗之法，凡医术各十三科，曰大方脉，……曰口齿，曰接骨，曰伤寒，曰咽喉，……凡医家子弟，择师而教之”。情况与元代相同，咽喉是独立成科。医学著作，在明朝是鼎盛时代。明初《普济方•身形》里口齿、咽喉科占有十三卷（58〜59卷口舌门，60〜64卷咽喉门，65〜70卷牙齿门）。比《普济方》晚39年出书的朝鲜巨著《医方类聚》，内有口齿咽喉也有七卷之多（71〜72卷牙齿门，74〜76 1/2卷咽喉门，76 1/2〜77卷口舌门）。《本草纲目》中1,892种药物，内626种单味药用来直接治疗咽喉口齿病的。内服或外用配伍成方剂的，尚不计在内。《口齿类要》是薛己在1604年写成的，虽然据称在此之前，尚有张仲景的《口齿论》，邵英俊的《口齿论》，释道济的《口齿玉泉论》，佚名氏的《排玉论》，冲和的《口齿论》，广陵王师的《口齿论》，佚名氏的《咽喉口齿论》和佚名氏的《疗口齿方》，但都已散佚无存，不见于世，所以本书为唯一到今天还存在的喉科最早一部专科书。《景岳全书》的“无病而喉窍紧塞，息难出入，不半日而紧塞愈甚。……问其喉，则无肿无痛也。观其貌，则面青目瞠，不能语也。闻其声，则喉窍之细如针，抽息之窘如线。伸颈挣命求救不堪之状，其可怜也”。这是急性喉梗阻第一篇最详细的症状描述。《黴疮秘录》：“喉㾌蚀鼻，发块上下，破烂孔窍”、“大肉已削，止存皮骨，且咽喉腐烂”、“咽喉损伤”……等，这是言由梅毒引起的对咽喉损害的第一个专论。《红炉点雪》的火病失音，是全世界最早讨论喉结核的文献。《解围元薮》的哑风，也是世界最早讨论喉麻风的文献。
+《明史•百官志》：“大医院掌医疗之法，凡医术各十三科，曰大方脉，……曰口齿，曰接骨，曰伤寒，曰咽喉，……凡医家子弟，择师而教之”。情况与元代相同，咽喉是独立成科。医学著作，在明朝是鼎盛时代。明初《普济方•身形》里口齿、咽喉科占有十三卷（58〜59卷口舌门，60〜64卷咽喉门，65〜70卷牙齿门）。比《普济方》晚39年出书的朝鲜巨著《医方类聚》，内有口齿咽喉也有七卷之多（71〜72卷牙齿门，74〜76½卷咽喉门，76½〜77卷口舌门）。《本草纲目》中1,892种药物，内626种单味药用来直接治疗咽喉口齿病的。内服或外用配伍成方剂的，尚不计在内。《口齿类要》是薛己在1604年写成的，虽然据称在此之前，尚有张仲景的《口齿论》，邵英俊的《口齿论》，释道济的《口齿玉泉论》，佚名氏的《排玉论》，冲和的《口齿论》，广陵王师的《口齿论》，佚名氏的《咽喉口齿论》和佚名氏的《疗口齿方》，但都已散佚无存，不见于世，所以本书为唯一到今天还存在的喉科最早一部专科书。《景岳全书》的“无病而喉窍紧塞，息难出入，不半日而紧塞愈甚。……问其喉，则无肿无痛也。观其貌，则面青目瞠，不能语也。闻其声，则喉窍之细如针，抽息之窘如线。伸颈挣命求救不堪之状，其可怜也”。这是急性喉梗阻第一篇最详细的症状描述。《黴疮秘录》：“喉㾌蚀鼻，发块上下，破烂孔窍”、“大肉已削，止存皮骨，且咽喉腐烂”、“咽喉损伤”……等，这是言由梅毒引起的对咽喉损害的第一个专论。《红炉点雪》的火病失音，是全世界最早讨论喉结核的文献。《解围元薮》的哑风，也是世界最早讨论喉麻风的文献。
 
 清代首入关统治到鸦片战争的两百年中，医事制度又分九科，咽喉与口齿再度并合，故《杂病源流犀烛》谓之：“言咽喉则牙舌部多包于内”。至于民间的实际情况，则咽喉大多独立成科，口齿科在正规分科中逐渐消失。凡一般口腔粘膜病习惯上多属于内科或儿科，化脓性和牙周疾病则属外科。牙体疾病则另有草泽铃医（俗称大凉伞郎中）来担任。清代的确涌出了不少有名喉科专家，喉科著作也有一百多种，这种盛况为历来所未有。尤其是江苏省无锡尤氏的外用药与上海侯氏的擎拿，在整个喉科领域里起到极大的影响。《尤氏喉科》一书，是喉科领域里最有影响的大事，也是清代到今天喉科得以兴隆鼎盛的关键。尤氏在从明代嘉靖迄清代乾隆中约250年一个时期里祖孙、父子相传，一直到最后一代尤存隐。在此期间，尤氏历代把积累的多年经验写成此书，估计在公元1700〜1750年间逐渐趋于完整而到完稿。根据《尤氏喉科》：“牙关紧闭，口不能开，……用黄熟香削成凿子样，渐渐掭进牙缝，则牙渐开”。可知在1750年之前，中医已开始使用了开口器。
 
