update ok/gl/gl07-0.2.1.6.0.md. 改侬为憹

--- a/ok/gl/gl07-0.2.1.6.0.md
+++ b/ok/gl/gl07-0.2.1.6.0.md
@@ -8,7 +8,7 @@
 
 2.清法的运用
 
-清气分热：适用于热在气分之证，症见壮热，烦渴，多汗，舌苔黄，脉洪大滑数，或热病后余热未清，症见心烦懊侬等。代表方剂为[白虎汤](https://www.gmzyjc.com/read/fjx/fjx04-0.1.0.0.0.md)、栀子豉汤。
+清气分热：适用于热在气分之证，症见壮热，烦渴，多汗，舌苔黄，脉洪大滑数，或热病后余热未清，症见心烦懊憹等。代表方剂为[白虎汤](https://www.gmzyjc.com/read/fjx/fjx04-0.1.0.0.0.md)、栀子豉汤。
 
 清营凉血：适用于邪热入营，或入血分之证，症见身热烦扰，口渴或不渴，神昏谵语，吐衄发斑，舌质红绛，脉细数。代表方剂为[清营汤](https://www.gmzyjc.com/read/fjx/fjx04-0.2.0.0.0.md)、[犀角地黄汤](https://www.gmzyjc.com/read/fjx/fjx04-0.3.0.0.0.md)。
 
