--- a/ok/gl/gl07-0.2.2.0.0.md
+++ b/ok/gl/gl07-0.2.2.0.0.md
@@ -84,7 +84,7 @@
 
 更有取其打嚏而作升提者，如大肠不收，或产妇子宫不收，取嚏即收。
 
-㗜鼻药的剂型，约有粉剂，蒸气及烟三种。如王好古解利伤寒，用[藿香](https://www.gmzyjc.com/read/bc/bc04-0.0.1.0.0.md)、[藜芦](https://www.gmzyjc.com/read/bc/bc19-0.0.4.0.0.md)、踯躅花研末㗜鼻，以及现在常用的通关散等，都是粉剂。《理瀹骈文》治血虚头痛，用熟地煎汤置壶中吸其气，是用水蒸气取嚏；治冷嗽，用[款冬花](https://www.gmzyjc.com/read/bc/bc16-0.3.4.0.0.md)末烧烟㗜收，是用烟取嚏。假定不用药物而只用纸捻、鸡毛或手指的刺激而取嚏者，是搐鼻法，不属嗜法范围，而属于利用物理作用的外治法。
+㗜鼻药的剂型，约有粉剂，蒸气及烟三种。如王好古解利伤寒，用[藿香](https://www.gmzyjc.com/read/bc/bc04-0.0.1.0.0.md)、[藜芦](https://www.gmzyjc.com/read/bc/bc19-0.0.4.0.0.md)、踯躅花研末㗜鼻，以及现在常用的通关散等，都是粉剂。《理瀹骈文》治血虚头痛，用熟地煎汤置壶中吸其气，是用水蒸气取嚏；治冷嗽，用[款冬花](https://www.gmzyjc.com/read/bc/bc16-0.3.4.0.0.md)末烧烟㗜收，是用烟取嚏。假定不用药物而只用纸捻、鸡毛或手指的刺激而取嚏者，是搐鼻法，不属㗜法范围，而属于利用物理作用的外治法。
 
 #### 10. 滴眼法和点眼法
 
