update ok/yk/yk0zl01-1.1.0.0.0.md. 改字，芣

--- a/ok/yk/yk0zl01-1.1.0.0.0.md
+++ b/ok/yk/yk0zl01-1.1.0.0.0.md
@@ -4,7 +4,7 @@
 
 1.早期一般书籍文献中有关眼病医药的记载，从考察河南安阳殷墟出土的甲骨文可知，早在武丁时代（约公元前13〜14世纪），人们把眼病称之为“疾目”，眼病失明曰：“丧明”。如甲骨文卜辞中记载有“贞王弗疾目”、“大目不丧明”等。此是我国关于眼病的最早文字记录。
 
-随着人们长期的生活和医疗实践，逐渐发现并记载了某些动、植物及矿物有治疗眼病的作用。如先秦古地理著作《山海经》中记录药物100多种，其中治疗眼病的药物就有7种。如䔄草，《山海经•中山经》曰：“泰室之山，……有草焉，其状如𦬸，白华黑实，泽如蘡薁，其名曰䔄草，服之不昧。”既对其形态作了描述，又介绍了治疗作用。除《山海经》外，《诗经》、《淮南子》等古籍书中也载有若干医治眼病的药物。
+随着人们长期的生活和医疗实践，逐渐发现并记载了某些动、植物及矿物有治疗眼病的作用。如先秦古地理著作《山海经》中记录药物100多种，其中治疗眼病的药物就有7种。如䔄草，《山海经•中山经》曰：“泰室之山，……有草焉，其状如芣，白华黑实，泽如蘡薁，其名曰䔄草，服之不昧。”既对其形态作了描述，又介绍了治疗作用。除《山海经》外，《诗经》、《淮南子》等古籍书中也载有若干医治眼病的药物。
 
 至春秋时期，已将盲人称为瞽人，如《书经》记载有“瞽奏鼓”。《诗经》记载有“矇瞍奏公”。据《毛传》称：“有眸子而无见曰矇，无眸子曰瞍。”这又将盲目分成了两类。
 
