--- a/ok/bc/bc07-0.1.0.0.0.md
+++ b/ok/bc/bc07-0.1.0.0.0.md
@@ -1,10 +1,10 @@
 ## **附子**
 
-〔原文〕**辛甘有毒，大热纯阳。其性浮而不沉，其用走而不守，通行十二经，无所不至。能引补气药以复散失之元阳（1），引补血药以滋不足之真阴（2），引发散药开腠理，以逐在表之风寒，**同干姜、桂枝温经散寒发汗。**引温暖药达下焦，以祛在里之寒湿。**能引火下行。亦有津调贴足心者。入八味丸内，亦从地黄等补阴。**治三阴伤寒（3），**吴绶曰：附子阴证要药。凡伤寒传变三阴，中寒夹阴，身虽大热，而脉沉细者；或厥阴腹痛，甚则唇青囊缩者，急待用之。若待阴极阳竭而用之，已迟矣。东垣治阴盛格阳，伤寒面赤目赤，烦渴引饮，脉七八至，但按之则散，用姜附汤加人参，投半斤，得汗而愈，此神圣之妙也。**中寒中风，**卒中曰中，渐伤曰伤。轻为感冒，重则为伤，又重则为中。**气厥痰厥，**虚寒而厥者宜之。如伤寒阳盛格阴，身冷脉伏，热厥似寒者，误投立毙，宜承气、白虎等汤。**咳逆**风寒。**呕哕**，胃寒。**膈噎**，膈噎，多由气血虚，胃冷、胃槁而成。饮可下而食不可下，槁在吸门，喉间之厌会也；食下胃脘痛，须臾吐出，槁在贲门，胃之上口也，此上焦，名噎；食下良久吐出，槁在幽门，胃之下口也，此中焦，名膈；朝食暮吐，槁在阑门，大小肠下口也，此下焦，名反胃。又有痰厥、食积、瘀血壅塞胃口者，如寒痰胃冷，则宜姜附参术，胃槁者当滋润，宜四物、牛羊乳，血瘀者加韭汁。当与韭汁牛乳二条，参看论治。**脾泄**，命火不足，**冷痢寒泻，霍乱转筋，**脾虚寒客中焦为霍乱，寒客下焦肝肾为转筋。热霍乱者禁用。拘挛风痹**，癥瘕积聚，督脉为病，脊强而厥，小儿慢惊（4），痘疮灰白，痈疽不敛，一切沉寒痼冷（5）之证。**经曰：阴盛生内寒，阳虚生外寒。**助阳退阴，杀邪辟鬼，**本草未载。**通经堕胎。**凡阴证用姜附药，宜冷服，热因寒用也。盖阴寒在下，虚阳上浮，治之以寒，则阴益盛，治之以热，则拒格不纳。用热药冷饮，下嗌之后，冷体既消，热性便发，情且不违，而致大益，此反治之妙也。又有寒药热饮治热证者，此寒因热用，义亦相同也。经曰：正者正治，反者反治。如用寒治热，用热治寒，此正治也；或以寒治寒，以热治热，此反治也。经所谓必伏其所主，而先其所因，盖借寒药热药为反佐，以作向导也，亦曰从治。王好古曰，用附子以补火，必防涸水。如阴虚之人，久服补阳之药，则虚阳益炽，真阴愈耗，精血日枯，而气无所附丽，遂成不救者多矣。
+〔原文〕**辛甘有毒，大热纯阳。其性浮而不沉，其用走而不守，通行十二经，无所不至。能引补气药以复散失之元阳（1），引补血药以滋不足之真阴（2），引发散药开腠理，以逐在表之风寒，**同干姜、桂枝温经散寒发汗。**引温暖药达下焦，以祛在里之寒湿。**能引火下行。亦有津调贴足心者。入八味丸内，亦从地黄等补阴。**治三阴伤寒（3），**吴绶曰：附子阴证要药。凡伤寒传变三阴，中寒夹阴，身虽大热，而脉沉细者；或厥阴腹痛，甚则唇青囊缩者，急待用之。若待阴极阳竭而用之，已迟矣。东垣治阴盛格阳，伤寒面赤目赤，烦渴引饮，脉七八至，但按之则散，用姜附汤加人参，投半斤，得汗而愈，此神圣之妙也。**中寒中风，**卒中曰中，渐伤曰伤。轻为感冒，重则为伤，又重则为中。**气厥痰厥，**虚寒而厥者宜之。如伤寒阳盛格阴，身冷脉伏，热厥似寒者，误投立毙，宜承气、白虎等汤。**咳逆**风寒。**呕哕**，胃寒。**膈噎**，膈噎，多由气血虚，胃冷、胃槁而成。饮可下而食不可下，槁在吸门，喉间之厌会也；食下胃脘痛，须臾吐出，槁在贲门，胃之上口也，此上焦，名噎；食下良久吐出，槁在幽门，胃之下口也，此中焦，名膈；朝食暮吐，槁在阑门，大小肠下口也，此下焦，名反胃。又有痰厥、食积、瘀血壅塞胃口者，如寒痰胃冷，则宜姜附参术；胃槁者当滋润，宜四物、牛羊乳，血瘀者加韭汁。当与韭汁牛乳二条，参看论治。**脾泄**，命火不足，**冷痢寒泻，霍乱转筋，**脾虚寒客中焦为霍乱，寒客下焦肝肾为转筋。热霍乱者禁用。拘挛风痹**，癥瘕积聚，督脉为病，脊强而厥，小儿慢惊（4），痘疮灰白，痈疽不敛，一切沉寒痼冷（5）之证。**经曰：阴盛生内寒，阳虚生外寒。**助阳退阴，杀邪辟鬼，**本草未载。**通经堕胎。**凡阴证用姜附药，宜冷服，热因寒用也。盖阴寒在下，虚阳上浮；治之以寒，则阴益盛；治之以热，则拒格不纳。用热药冷饮，下嗌之后，冷体既消，热性便发，情且不违，而致大益，此反治之妙也。又有寒药热饮治热证者，此寒因热用，义亦相同也。经曰：正者正治，反者反治。如用寒治热，用热治寒，此正治也；或以寒治寒，以热治热，此反治也。经所谓必伏其所主，而先其所因，盖借寒药热药为反佐，以作向导也，亦曰从治。王好古曰：用附子以补火，必防涸水。如阴虚之人，久服补阳之药，则虚阳益炽，真阴愈耗，精血日枯，而气无所附丽，遂成不救者多矣。
 
 **母为乌头，附生者为附子，连生者为侧子，细长者为夭雄，两歧者为乌喙，五物同出异名**。
 
-**附子以西川彰明、赤水产者为最，皮黑体圆，底平八角，重一两以上者良。**或云二两者更胜，然难得。**生用发散，熟用峻补**。赵嗣真曰：仲景麻黄附子细辛汤，熟附配麻黄，发中有补；四逆汤生附配干姜，补中有发，其旨微矣。丹溪曰：乌附行经，仲景八味丸用为少阳向导，后世因以为补药，误矣。附子走而不守，取其健悍走下，以行地黄之滞耳。相习用为风药及补药，杀人多矣。昂按：附子味甘气热，峻补元阳，阳微欲绝者，回生起死，非此不为功，故仲景四逆、真武、白通诸汤多用之。其有功于生民甚大，况古人日用常方，用之最多，本非禁剂，丹溪乃仅以为行经之药，而云用作补药，多致杀人，言亦过矣。盖丹溪法重滋阴，故每餐阳药，亦其偏也。王节斋曰：气虚用四君子汤，血虚用四物汤，虚甚者俱宜加熟附。盖四君四物，皆平和宽缓之剂，须得附子健悍之性行之，方能成功。附子热药，本不可轻用，但当病，则虽暑热时月亦可用也**。水浸面裹煨，令发坼，乘热切片炒黄，去火毒用。又法，甘草二钱，盐水、姜汁、童便各半盏煮熟用。今时人用黑豆者亦佳。畏人参、黄芪、甘草、防风、犀角、绿豆、童便，反贝母、半夏、栝蒌、白及、白蔹。中其毒者，黄连、犀角、甘草煎汤解之，黄土水亦可解。**
+**附子以西川彰明、赤水产者为最，皮黑体圆，底平八角，重一两以上者良。**或云二两者更胜，然难得。**生用发散，熟用峻补**。赵嗣真曰：仲景麻黄附子细辛汤，熟附配麻黄，发中有补；四逆汤生附配干姜，补中有发，其旨微矣。丹溪曰：乌附行经，仲景八味丸用为少阳向导，后世因以为补药，误矣。附子走而不守，取其健悍走下，以行地黄之滞耳。相习用为风药及补药，杀人多矣。昂按：附子味甘气热，峻补元阳，阳微欲绝者，回生起死，非此不为功，故仲景四逆、真武、白通诸汤多用之。其有功于生民甚大，况古人日用常方，用之最多，本非禁剂，丹溪乃仅以为行经之药，而云用作补药，多致杀人，言亦过矣。盖丹溪法重滋阴，故每訾阳药，亦其偏也。王节斋曰：气虚用四君子汤，血虚用四物汤，虚甚者俱宜加熟附。盖四君四物，皆平和宽缓之剂，须得附子健悍之性行之，方能成功。附子热药，本不可轻用，但当病，则虽暑热时月亦可用也**。水浸面裹煨，令发坼，乘热切片炒黄，去火毒用。又法，甘草二钱，盐水、姜汁、童便各半盏煮熟用。今时人用黑豆者亦佳。畏人参、黄芪、甘草、防风、犀角、绿豆、童便，反贝母、半夏、栝蒌、白及、白蔹。中其毒者，黄连、犀角、甘草煎汤解之，黄土水亦可解。**
 
 **乌头功同附子而稍缓。附子性重峻，温脾逐寒；乌头性轻疏，温脾逐风。寒疾宜附子，风疾宜乌头。**
 
@@ -18,8 +18,8 @@
 
 **附子温里祛寒，补阳助火，为回阳救逆要药。**为毛莨科多年生草本植物乌头的子根加工品。有盐附子、黑顺片、白附子之分。主产于四川，湖北、湖南等省亦有栽培。
 
-本品辛甘而热，有毒。入心、肾、脾三经。走而不守，具纯阳之性，能上助心阳以通脉，中温脾阳以健运，下补肾阳以益火，外固卫阳以祛寒，所谓“开辟群阴，迎阳归舍；果有真寒，无所不治”。即是此意。故亡阳欲脱，脉微欲绝者用之，可以回阳复脉；肾阳不足，阳痿滑精，腰膝冷弱者用之，可以补火助阳；脾阳不振，脘腹冷痛，水肿尿少者用之，可以温阳化气；风寒湿痹，疼痛麻木者用之，可以祛寒止痛。总之，附子既能追复散失之亡阳，又能资助亏损之元阳，并可逐表里之寒湿。故《本草求真》曰：其入补气药中，则追散失之元阳；入发散药中，则能开胰理以逐在表之风寒；入温暖药中，则能祛在里之寒湿。故一切沉寒痼冷之证，均可用之。
+本品辛甘而热，有毒。入心、肾、脾三经。走而不守，具纯阳之性，能上助心阳以通脉，中温脾阳以健运，下补肾阳以益火，外固卫阳以祛寒，所谓“开辟群阴，迎阳归舍；果有真寒，无所不治”。即是此意。故亡阳欲，脱脉微欲绝者用之，可以回阳复脉；肾阳不足，阳痿滑精，腰膝冷弱者用之，可以补火助阳；脾阳不振，脘腹冷痛，水肿尿少者用之，可以温阳化气；风寒湿痹，疼痛麻木者用之，可以祛寒止痛。总之，附子既能追复散失之亡阳，又能资助亏损之元阳，并可逐表里之寒湿。故《本草求真》曰：其入补气药中，则追散失之元阳；入发散药中，则能开腠理以逐在表之风寒；入温暖药中，则能祛在里之寒湿。故一切沉寒痼冷之证，均可用之。
 
-【临证应用】附子配干姜，可增强回阳救逆之功，以治亡阳证，四肢厥逆，脉微欲绝者，如四逆汤；配人参，可加强扶阳益气之效，以治阳衰气脱，大汗淋漓，气短喘息者，如参附汤；配肉桂，可补阳益火，以治肾阳不足，命门火衰，阳痿尿频，畏寒肢冷，腰痿脚弱等证，如桂附八味丸；配白术，可温脾燥湿，以治脾阳不振，寒湿内阻，脘腹冷痛，大便溏泄，如附子理中丸；配桂枝，能温经止痛，以治痹痛，周身关节疼痛之证，如桂枝附子汤；配熟地，可补阳滋阴，以治阴阳两亏之证；配茯苓，可助阳化气，以治脾肾阳虚，水湿内停，小便不利，肢体浮肿者，如：真武汤；配黄芪，可温阳固表，以治阳衰而表不固，冷汗不止者，如芪附汤；配麻黄可助阳发表，以治素体阳虚，外感风寒之证，如麻黄附子细辛汤。若逢寒热错杂之证，亦可与寒凉药同用，如：配黄连，可扶阳泻热，以治心下痞而恶寒汗出者，如附子泻心汤；配大黄，可温阳通便，用治阴寒积聚，腹痛便秘，如大黄附子汤。
+【临证应用】附子配干姜，可增强回阳救逆之功，以治亡阳证，四肢厥逆，脉微欲绝者，如四逆汤；配人参，可加强扶阳益气之效，以治阳衰气脱，大汗淋漓，气短喘息者，如参附汤；配肉桂，可补阳益火，以治肾阳不足，命门火衰，阳痿尿频，畏寒肢冷，腰痿脚弱等证，如桂附八味丸；配白术，可温脾燥湿，以治脾阳不振，寒湿内阻，脘腹冷痛，大便溏泄，如附子理中丸；配桂枝，能温经止痛，以治痹痛，周身关节疼痛之证，如桂枝附子汤；配熟地，可补阳滋阴，以治阴阳两亏之证；配茯苓，可助阳化气，以治脾肾阳虚，水湿内停，小便不利，肢体浮肿者，如真武汤；配黄芪，可温阳固表，以治阳衰而表不固，冷汗不止者，如芪附汤；配麻黄可助阳发表，以治素体阳虚，外感风寒之证，如麻黄附子细辛汤。若逢寒热错杂之证，亦可与寒凉药同用，如配黄连，可扶阳泻热，以治心下痞而恶寒汗出者，如附子泻心汤；配大黄，可温阳通便，用治阴寒积聚，腹痛便秘，如大黄附子汤。
 
 【用量用法】3—15克。入汤剂须先煎30—60分钟，以减其毒性。附子性燥烈有毒，故非阴盛阳衰者不宜服用。阴虚内热患者及孕妇忌用。反半夏、瓜篓、白蔹、白芨、贝母。畏犀角。
