--- a/ok/bc/bc03.md
+++ b/ok/bc/bc03.md
@@ -10,14 +10,14 @@
 
 1. 了解清热药的含义、功效、分类、适用证。
 2. 熟悉清热泻火药的共同功用。
-3. 掌握清热泻火药中常用药（石膏、知母、栀子、夏枯草、芦根）的功效、临证应用，并比较其异同。
+3. 掌握清热泻火药中常用药（石膏 知母  栀子  夏枯草  芦根）的功效、临证应用，并比较其异同。
 4. 熟悉清热燥湿药的共同功用。
-5. 掌握清热燥湿药中常用药（黄芩、黄连、黄柏、龙胆草）的功效、临证应用，并比较其异同。
+5. 掌握清热燥湿药中常用药（黄芩 黄连  黄柏  龙胆草）的功效、临证应用，并比较其异同。
 6. 熟悉清热凉血药的共同功用。
-7. 掌握清热凉血药中常用药（犀角、生地黄、玄参、牡丹皮〉的功效、临证应用，并比较其异同。
+7. 掌握清热凉血药中常用药（犀角 生地黄  玄参  牡丹皮〉的功效、临证应用，并比较其异同。
 8. 熟悉清热解毒药的共同功用。
-9. 掌握清热解毒药中常用药（金银花、连翘、大青叶、牛黄、鱼腥草、土茯苓、败酱草、射干、马齿苋）的功效、临证应用，并比较其异同。
-10. 掌握清虚热药中常用药（青蒿、白薇、地骨皮、胡黄连）功效、临证应用，并比较其异同。
+9. 掌握清热解毒药中常用药（金银花  连翘  大青叶  牛黄  鱼腥草  土茯苓  败酱草  射干 马齿苋）的功效、临证应用，并比较其异同。
+10. 掌握清虚热药中常用药（青蒿  白薇  地骨皮  胡黄连）的功效、临证应用，并比较其异同。
 11. 熟悉清热泻火、清热解毒、清热凉血、清热燥湿、清热生津、清虚热的概念。
 12. 了解寒凉伤阳、苦寒败胃、苦燥伤津、甘寒助湿的含义。
 13. 在自学本章全部内容的基础上，重点掌握小结内容。
@@ -25,12 +25,8 @@
 
 
 凡以清解里热为主要作用的药物，称之为清热药。
-
 清热药多属寒凉之性，具有清热泻火，凉血解毒及退虚热等功效。主要应用于热病、热痢、痈肿疮毒、咽喉肿痛、目赤肿痛及阴虚内热等里热证。
-
-
 应用清热药时，首先应辨明热证属气属血，属虚属实，在脏在腑来决定用药的主次和先后。如兼有表证，应先解表或表里同治；气分热兼血分热者，宜气血两清。
-
 本类药性多寒凉，易伤阳气，故阳气不足，脾胃虚弱者应慎用。使用时，亦要注意中病即止，避免克伐太过，损伤正气。
 
 清热药数量颇多，虽都具有清解里热的作用，按其药物各自的特点，有的以泻火为主，有的以解毒为主等，又可分为清热泻火药，清热燥湿药，清热凉血药，清热解毒药，退虚热药五类。只有了解清热药的共性，又掌握他们的特点，才能有选择性的用药，以加强疗效。
