--- a/ok/bc/bc07-0.3.0.0.0.md
+++ b/ok/bc/bc07-0.3.0.0.0.md
@@ -12,13 +12,13 @@
 
 桂心为肉桂之干皮去表皮者，又称肉桂心。性味功效与肉桂相同。《本草经疏》云：桂枝气薄轻扬，上浮达表，治邪客表分之为病；肉桂、桂心，味厚甘辛大热，下行走里。治命门真火不足，阳虚寒动于中，及一切里虚阴寒，寒邪客里之为病。由此可见桂心与肉桂的应用也是相类似的。
 
-【临证应用】肉桂与附子、熟地、山萸肉等温补肝肾药同用，治疗肾阳不足，命门火衰，证见畏寒肢冷，腰膝软弱，阳痿尿频等，如桂附八味丸。肉桂配附子、干姜、白术等，如桂附理中丸，以温补脾肾，治疗脾肾阳衰，脘腹冷痛，食少便溏等证。本品不仅与附、姜等祛寒药同用能益火消阴，而且还可与寒凉药黄柏、知母同用，如通关丸，治下焦湿热，小便不通，以助膀胱气化之功。肉桂既能散沉寒；又能通血脉，无论寒凝气滞，或寒凝血瘀所致的痛证均可应用，如脘腹冷痛，寒湿痹痛，腰痛等，可单味研末冲服，或配伍其他散寒止痛药；若血分有寒，血行不畅，瘀滞经闭，痛经等证，可配伍当归、川芎、吴茱萸等活血通经的药物，如温经汤。对寒疝腹痛，单味研末服，亦有相当疗效。若阴寒盛者，亦可与温阳散寒药附子，吴茱萸等同用。
+【临证应用】肉桂与附子、熟地、山萸肉等温补肝肾药同用，治疗肾阳不足，命门火衰，证见畏寒肢冷，腰膝软弱，阳痿尿频等，如桂附八味丸。肉桂配附子、干姜、白术等，如桂附理中丸，以温补脾肾，治疗脾肾阳衰，脘腹冷痛，食少便溏等证。本品不仅与附、姜等祛寒药同用能益火消阴，而且还可与寒凉药黄柏、知母同用，如通关丸，治下焦湿热，小便不通，以助膀胱气化之功。肉桂既能散沉寒，又能通血脉，无论寒凝气滞，或寒凝血瘀所致的痛证均可应用，如脘腹冷痛，寒湿痹痛，腰痛等，可单味研末冲服，或配伍其他散寒止痛药；若血分有寒，血行不畅，瘀滞经闭，痛经等证，可配伍当归、川芎、吴茱萸等活血通经的药物，如温经汤。对寒疝腹痛，单味研末服，亦有相当疗效。若阴寒盛者，亦可与温阳散寒药附子、吴茱萸等同用。
 
 肉桂能散寒温阳，通畅气血，配熟地、鹿角胶、麻黄等，治疗阴疽，如阳和汤。若配黄芪、当归等补益气血药，可治疗气血虚寒，痈肿脓成不溃，或溃后久不收敛等外科疾患。
 
 此外，气虚血少之证，常以少量肉桂配入补气养血药中，有温运阳气，鼓舞气血生长的功效。如十全大补汤中应用本品，即是此义。
 
-肉桂与附子的温补阳气、散寒止痛之功相似，并常同用，如桂附八味丸、右归丸等。但附子性烈，能回阳救逆，肉桂性缓，能助汗外泄，所以，治阳气将绝之大汗亡阳虚脱诸证，用附子而不用肉桂，理血调经诸方，用肉桂而不用附子。由此可知，附子作用偏于气分，肉桂作用偏于血分，这是两者的主要差别。
+肉桂与附子的温补阳气、散寒止痛之功相似，并常同用，如桂附八味丸、右归丸等。但附子性烈，能回阳救逆；肉桂性缓，能助汗外泄，所以，治阳气将绝之大汗亡阳虚脱诸证，用附子而不用肉桂；理血调经诸方，用肉桂而不用附子。由此可知，附子作用偏于气分，肉桂作用偏于血分，这是两者的主要差别。
 
 肉桂与桂枝，同出于桂树，一为树皮，一为树嫩枝。都有温营血，助气化，散寒凝的作用。但肉桂长于温里止痛，入下焦而补肾阳；桂枝长于发表散寒，主上行而通经脉。
 
