--- a/ok/yk/yk0zl01-1.3.0.0.0.md
+++ b/ok/yk/yk0zl01-1.3.0.0.0.md
@@ -28,8 +28,6 @@
 
 上述学术争鸣，对中医眼科的学术发展和兴盛，起到了促进作用。
 
-3.其它眼科成就：我国早在宋代就发明和使用了眼镜。如南宋赵希鹄，在考鉴宋以前古文物的著作《洞天清录》中记载：“叆叇，老人不辨细书，以此掩目则明。”至明代，屠隆在《文
-
-房器具笺》中描述叆叇“大如钱，色如云母。”张自烈的《正字通》载：“叆叇，眼镜也。”以上说明，早在宋代我国已开始用眼镜矫正视力了。
+3.其它眼科成就：我国早在宋代就发明和使用了眼镜。如南宋赵希鹄，在考鉴宋以前古文物的著作《洞天清录》中记载：“叆叇，老人不辨细书，以此掩目则明。”至明代，屠隆在《文房器具笺》中描述叆叇“大如钱，色如云母。”张自烈的《正字通》载：“叆叇，眼镜也。”以上说明，早在宋代我国已开始用眼镜矫正视力了。
 
 总之，自宋代眼科独立设科以后，从理论和临床两方面，都得到了很大的发展。
