--- a/ok/yk/yk0zl01-1.4.0.0.0.md
+++ b/ok/yk/yk0zl01-1.4.0.0.0.md
@@ -6,9 +6,7 @@
 
 1.明代：
 
-（1）元末明初医家倪维德著《原机启微》两卷，上卷将眼内、外各部病证按病因分为“风热不制之病”、“阳衰不能抗阴之病”等18类，并理论联系实际，详细分析病机，辨证论治。治疗除内服药为主外，还视病情需要，配合使用外洗、㗜鼻、点药、手术等外治法。下卷论方剂配伍，附40余方，每方皆有方解。该书是一本阐述理论比较系统，又切合实用的眼科书。倪氏治学宗古而不泥于古，能够兼采前人众家之长，注重整体观念，
-
-论治善用时方，有攻有补，内外兼施，学术见地精深，具有不执偏见的科学精神。
+（1）元末明初医家倪维德著《原机启微》两卷，上卷将眼内、外各部病证按病因分为“风热不制之病”、“阳衰不能抗阴之病”等18类，并理论联系实际，详细分析病机，辨证论治。治疗除内服药为主外，还视病情需要，配合使用外洗、㗜鼻、点药、手术等外治法。下卷论方剂配伍，附40余方，每方皆有方解。该书是一本阐述理论比较系统，又切合实用的眼科书。倪氏治学宗古而不泥于古，能够兼采前人众家之长，注重整体观念，论治善用时方，有攻有补，内外兼施，学术见地精深，具有不执偏见的科学精神。
 
 （2）明初朱橚等编著的《普济方》，眼目门占16卷，集病名300余种，收方2300余首。因眼目门是由数十种书籍的眼科资料汇集而成，所以常常一种眼病列出若干个病名。如黑睛生翳的病症名就有忽生翳膜、赤眼暴生翳等40余种。
 
