--- a/ok/bc/bc07-0.4.0.0.0.md
+++ b/ok/bc/bc07-0.4.0.0.0.md
@@ -6,6 +6,6 @@
 
 本品味辛性热。入脾、胃、心、肺四经。辛热性燥，既能袪脾胃寒邪，又能助脾胃之阳气。故凡脾胃之寒证，无论外寒内侵之实证，或阳气不足之虚证均常应用。干姜除祛里寒外，又能通心气以助阳，而有回阳救逆之功，治阳气衰微，亡阳之证。本品既能温补脾阳以燥湿，又能温散肺寒以化饮，而治寒饮咳喘。
 
-【临证应用】干姜用于脾胃寒证，脘腹冷痛，呕吐泄泻等证，可单用，研末调服。或与高良姜等分为丸，每次3—6克，温水送服，如二姜丸。若胃寒气逆呕吐，可与降逆止呕的半夏相配伍，如半夏干姜散。若脾胃虚寒者，应与补脾益气药人参、白术、甘草配伍，如理中丸。用于亡阳证，四肢厥冷，脉微欲绝资，常与附子同用，助附子以增回阳救逆之功，如四逆汤。用于寒饮咳嗽气喘，形寒背冷，痰多清稀者，常与麻黄、细辛、五味子等同用，如小青龙汤。
+【临证应用】干姜用于脾胃寒证，脘腹冷痛，呕吐泄泻等证，可单用，研末调服。或与高良姜等分为丸，每次3—6克，温水送服，如二姜丸。若胃寒气逆呕吐，可与降逆止呕的半夏相配伍，如半夏干姜散。若脾胃虚寒者，应与补脾益气药人参、白术、甘草配伍，如理中丸。用于亡阳证，四肢厥冷，脉微欲绝者，常与附子同用，助附子以增回阳救逆之功，如四逆汤。用于寒饮咳嗽气喘，形寒背冷，痰多清稀者，常与麻黄、细辛、五味子等同用，如小青龙汤。
 
 【用量用法】3—10克，煎服。
