--- a/ok/bc/bc07-0.4.1.0.0.md
+++ b/ok/bc/bc07-0.4.1.0.0.md
@@ -4,4 +4,4 @@
 
 姜有生姜、干姜、炮姜之分。生姜辛温，长于发散，又能温中止呕，为外感风寒及胃寒呕吐之常用药物；干姜辛热，辛散之力减弱，长于温中回阳；又兼能温肺化饮，偏治里寒之证，为脾胃衰微，吐泻腹痛，虚痞之要药；炮姜是干姜炒黑而成，性变苦温，辛散作用大减，而温经止血及温中止泻尤长，为治中焦虚寒，脾不统血之要药。故前人有“生姜走而不守，干姜能走能守，炮姜守而不走”之说，这是三者的主要区别。
 
-干姜与附子，均为辛热之品，同为祛寒药，有温里散寒、回阳救逆的作用，临床常配合使用。但附子长于温肾阳，回阳救逆力强，专主下焦而兼温中；干姜主要温脾阳，温脾暖胃力强，专主中焦兼能温肺，故肾阳衰微多用附子，肺寒咳喘多用干姜，而中焦虚寒，阳气不运，则姜、附常同用。以加强温中回阳之功。如四逆汤、附子理中汤等。温补下焦则每用附子而不用干姜，如右归丸、肾气丸等；温肺化饮则每用干姜而不用附子，如苓甘五味姜辛汤、小青龙汤等。可知二药的主要区别，附子偏于中下二焦，干姜偏于中上二焦。
+干姜与附子，均为辛热之品，同为祛寒药，有温里散寒、回阳救逆的作用，临床常配合使用。但附子长于温肾阳，回阳救逆力强，专主下焦而兼温中；干姜主要温脾阳，温脾暖胃力强，专主中焦兼能温肺，故肾阳衰微多用附子，肺寒咳喘多用干姜，而中焦虚寒，阳气不运，则姜、附常同用，以加强温中回阳之功。如四逆汤、附子理中汤等。温补下焦则每用附子而不用干姜，如右归丸、肾气丸等；温肺化饮则每用干姜而不用附子，如苓甘五味姜辛汤、小青龙汤等。可知二药的主要区别，附子偏于中下二焦，干姜偏于中上二焦。
