--- a/ok/bc/bc07-0.5.0.0.0.md
+++ b/ok/bc/bc07-0.5.0.0.0.md
@@ -1,8 +1,8 @@
 ## **吴茱萸**
 
-**〔原文〕辛苦大热，有小毒。入足太阴**脾。**血分，少阴、厥阴**肾、肝。**气分。**其气燥，故专入肝而旁及脾肾。**润肝燥脾，温中下气，除湿解郁，去痰杀虫，开腠理，逐风寒。治厥阴头痛，**仲景有吴茱萸汤。**阴毒腹痛，**痛在小腹。**呕逆吞酸，**俗名醋心。亦有吐酸者，宜降火清痰，用吴茱萸作响导。蔡中丞苦寒饮，率十日一发，头痛背寒，呕酸不食。得一方，茯苓、吴茱萸汤泡七次，等分，蜜丸，名吴仙丹，前后痰方无及此者。**痞满噎膈，**胃冷。**食积泻痢，血痹阴疝（1），痔疾肠风，脚气水肿，口舌生疮**，为末，醋调贴足心，过夜便愈，能引热下行。**冲脉为病，气逆里急。**宜此主之。**性虽热，而能引热下行，**段成式言：椒性善下，吴萸性上，似不尽然。寇宗奭曰：此物下气甚速。东垣曰：浊阴不降，厥气上逆，膈塞胀满，非吴萸不可治也。昂按：吴萸辛热，故性上，气味俱厚，故善降。**利大肠壅气，**故治肠风痔痢。**下产后余血**。故产后必用之。**然走气动火，昏目发疮，血虚有火者禁用。陈者良。泡去苦烈汁用，**须泡数次。**止呕黄连水炒  治疝盐水炒，治血醋炒。恶丹参、硝石。**
+**〔原文〕辛苦大热，有小毒。入足太阴**脾。**血分，少阴、厥阴**肾、肝。**气分。**其气燥，故专入肝而旁及脾肾。**润肝燥脾，温中下气，除湿解郁，去痰杀虫，开腠理，逐风寒。治厥阴头痛，**仲景有吴茱萸汤。**阴毒腹痛，**痛在小腹。**呕逆吞酸，**俗名醋心。亦有吐酸者，宜降火清痰，用吴茱萸作响导。蔡中丞苦寒饮，率十日一发，头痛背寒，呕酸不食。得一方，茯苓、吴茱萸汤泡七次，等分，蜜丸，名吴仙丹，前后痰方无及此者。**痞满噎膈，**胃冷。**食积泻痢，血痹阴疝（1），痔疾肠风，脚气水肿，口舌生疮**，为末，醋调贴足心，过夜便愈，能引热下行。**冲脉为病，气逆里急。**宜此主之。**性虽热，而能引热下行，**段成式言：椒性善下，吴萸性上，似不尽然。寇宗奭曰：此物下气甚速。东垣曰：浊阴不降，厥气上逆，膈塞胀满，非吴萸不可治也。昂按：吴萸辛热，故性上；气味俱厚，故善降。**利大肠壅气，**故治肠风痔痢。**下产后余血**。故产后必用之。**然走气动火，昏目发疮，血虚有火者禁用。陈者良。泡去苦烈汁用，**须泡数次。**止呕黄连水炒  治疝盐水炒，治血醋炒。恶丹参、硝石。**
 
-【讲解】（1）阴疝：病名，又名寒疝。因寒邪侵袭肝经而致睾丸，阴器急痛肿胀。
+【讲解】（1）阴疝：病名，又名寒疝。因寒邪侵袭肝经而致睾丸、阴器急痛肿胀。
 
 **昊茱萸功能疏肝下气**，**散寒止痛**。为芸香科落叶灌木或小乔木植物吴茱萸、石虎，或疏毛吴茱萸的将近成熟果实。用甘草汤制过应用。
 
