--- a/ok/bc/bc07-0.8.0.0.0.md
+++ b/ok/bc/bc07-0.8.0.0.0.md
@@ -1,6 +1,6 @@
 ## **丁香**
 
-**【原文】辛温纯阳。泄肺温胃，大能疗肾，壮阳事，暖阴户。治胃冷壅胀，呕哕呃逆**，丹溪曰：人之阴气，以胃为养，土伤则木挟相火，直冲清道而上作咳逆。古人以为胃寒，用丁香柿蒂，不能清痰利气，惟助火而已。按呃逆有痰阻气滞食塞，不能升降者，有火郁下焦者，有伤寒汗吐下后，中气大虚者，有阳明内热失下者，有痢疾大下，胃虚而阴火上冲者。时珍曰：当视虚实阴阳，或泄热，或降气，或温或补，或吐或下可也。古方单用柿蒂，取其苦温降气。《济生》加丁香、生姜，取其开郁散痰。盖从治之法，亦尝有收效者矣。朱氏但执以寒治热，矫枉之过矣。**痃癖奔豚，腹痛口臭**，丹溪曰：脾有郁火，溢入肺中，浊气上行，发为口气，治以丁香，是扬汤止沸耳，唯香藿甚捷。**脑疳齿䘌，痘疮胃虚灰白不发。热证忌用。有雌雄二种，**雌即鸡舌香，力大。若用雄，去丁盖乳子。**畏郁金、火。**
+**【原文】辛温纯阳。泄肺温胃，大能疗肾，壮阳事，暖阴户。治胃冷壅胀，呕哕呃逆**，丹溪曰：人之阴气，以胃为养，土伤则木挟相火，直冲清道而上作咳逆。古人以为胃寒，用丁香柿蒂，不能清痰利气，惟助火而已。按呃逆有痰阻气滞食塞，不能升降者，有火郁下焦者，有伤寒汗吐下后，中气大虚者，有阳明内热失下者，有痢疾大下，胃虚而阴火上冲者。时珍曰：当视虚实阴阳，或泄热，或降气，或温或补，或吐或下可也。古方单用柿蒂，取其苦温降气。《济生》加丁香、生姜，取其开郁散痰。盖从治之法，亦尝有收效者矣。朱氏但执以寒治热，矫枉之过矣。**痃癖奔豚，腹痛口臭**，丹溪曰：脾有郁火，溢入肺中，浊气上行，发为口气，治以丁香，是扬汤止沸耳，唯香薷甚捷。**脑疳齿䘌，痘疮胃虚灰白不发。热证忌用。有雌雄二种，**雌即鸡舌香，力大。若用雄，去丁盖乳子。**畏郁金、火。**
 
 【讲解】丁香长于温中降逆，兼能温肾助阳。为桃金娘科常绿乔木植物丁香的花蕾，称公丁香。主产于坦桑尼亚、马来西亚、印度尼西亚等地，我国广东亦有栽培。干燥生品入药。
 
