update ok/bc/bc05-0.0.7.0.0.md. “降心火，白色入肺，”改为“降心火。白色入肺，” “湿去则阑门通而阴阳利矣，阑门分别清浊，"改为”湿去则阑门通而阴阳利矣。阑门分别清浊，“ ”以治暑热烦渴，湿温胸闷，治暑湿泄泻，“改为”以治暑热烦渴，湿温胸闷；治暑湿泄泻，“

--- a/ok/bc/bc05-0.0.7.0.0.md
+++ b/ok/bc/bc05-0.0.7.0.0.md
@@ -1,10 +1,10 @@
 ### 滑石
 
-〔原文〕**滑利窍，淡渗湿，甘益气，补脾胃，寒泻热，降心火，白色入肺，上开腠理而发表，**<small>肺主皮毛。</small>**下走膀胱而行水，通六腑九窍津液，为足太阳经**<small>膀胱。</small>**本药。治中暑积热，呕吐烦渴，黄疸水肿，脚气淋闭，**<small>偏主石淋。</small>**水泻热痢，**<small>六一散加红麯治赤痢，加干姜治白痢。</small>**吐血衄血，诸疮肿毒，为荡热除湿之要剂。消暑散结，通乳滑胎。**<small>时珍曰：滑石利窍，不独小便也。上开腠理而发表，是除上中之湿热；下利便溺而行水，是除中下之湿热。热去则三焦宁而表面和，湿去则阑门通而阴阳利矣，阑门分别清浊，乃小肠之下口。河间益元散，通治上下表里诸病，盖是此意。益元散一名天水散，一名六一散，取天一生水，地六成之之义。滑石六钱，甘草一钱，或加辰砂。滑石治渴，非实止渴，资其利窍，渗去湿热，则脾胃中和而渴自止耳。若无湿小便利而渴者，内有燥热，宜滋润或误服此，则愈亡其津液而渴转甚矣，故王好古以为至燥之剂。</small>**白而润者良。石韦为使，宜甘草。**<small>走泄之性，宜甘草以和之。</small>
+〔原文〕**滑利窍，淡渗湿，甘益气，补脾胃，寒泻热，降心火。白色入肺，上开腠理而发表，**<small>肺主皮毛。</small>**下走膀胱而行水，通六腑九窍津液，为足太阳经**<small>膀胱。</small>**本药。治中暑积热，呕吐烦渴，黄疸水肿，脚气淋闭，**<small>偏主石淋。</small>**水泻热痢，**<small>六一散加红麯治赤痢，加干姜治白痢。</small>**吐血衄血，诸疮肿毒，为荡热除湿之要剂。消暑散结，通乳滑胎。**<small>时珍曰：滑石利窍，不独小便也。上开腠理而发表，是除上中之湿热；下利便溺而行水，是除中下之湿热。热去则三焦宁而表面和，湿去则阑门通而阴阳利矣。阑门分别清浊，乃小肠之下口。河间益元散，通治上下表里诸病，盖是此意。益元散一名天水散，一名六一散，取天一生水，地六成之之义。滑石六钱，甘草一钱，或加辰砂。滑石治渴，非实止渴，资其利窍，渗去湿热，则脾胃中和而渴自止耳。若无湿小便利而渴者，内有燥热，宜滋润或误服此，则愈亡其津液而渴转甚矣，故王好古以为至燥之剂。</small>**白而润者良。石韦为使，宜甘草。**<small>走泄之性，宜甘草以和之。</small>
 
 【讲解】**滑石功能利水渗湿，清热解暑。**为单斜晶系硅酸盐类矿物滑石的块状体。除去杂石，打碎或用粉碎、过筛后即成滑石粉，如用水飞磨粉，称飞滑石。
 
-本品味甘淡，性寒，质重而滑。甘淡渗湿，寒能清热，滑能利窍，重能清降，归胃、膀胱经。既能利水通淋，又善清解暑热，为夏日暑湿常用之药，内服外用皆可。内服能泻膀胱之热而通利小便，以治湿热下注的淋病，小便不利，尿血尿闭等证。寒滑通利，清解暑热而渗湿，以治暑热烦渴，湿温胸闷，治暑湿泄泻，既可渗湿，又能清解暑热，故尤为适当。本品外用，有清热收敛作用，可治湿疹、湿疮、痱子等皮肤病。
+本品味甘淡，性寒，质重而滑。甘淡渗湿，寒能清热，滑能利窍，重能清降，归胃、膀胱经。既能利水通淋，又善清解暑热，为夏日暑湿常用之药，内服外用皆可。内服能泻膀胱之热而通利小便，以治湿热下注的淋病，小便不利，尿血尿闭等证。寒滑通利，清解暑热而渗湿，以治暑热烦渴，湿温胸闷；治暑湿泄泻，既可渗湿，又能清解暑热，故尤为适当。本品外用，有清热收敛作用，可治湿疹、湿疮、痱子等皮肤病。
 
 【临证应用】滑石治淋病尿闭，可与木通、海金沙、金钱草等同用，如二金排石汤，再如治淋证的常用方八正散亦配用本品；用于暑热烦渴，小便赤涩，常配以甘草，如六一散。治湿温初起，湿邪较重之三仁汤和湿热并重之黄芩滑石汤均有本品。暑湿泄泻多与清热化湿药车前子、藿香等配伍。与炉甘石、枯矾等药配伍，研未外用，可治湿疮、湿疹等皮肤病，并为成药痱子粉之主要原料。
 
