--- a/ok/bc/bc07-0.9.0.0.0.md
+++ b/ok/bc/bc07-0.9.0.0.0.md
@@ -6,9 +6,9 @@
 
 **大如麦粒，轻而有细棱者名大茴，出宁夏，他处小者名小茴。自番舶来，实八瓣者，名八角茴香。炒黄用。得酒良。得盐则入肾，发肾邪，故治阴疝。**受病于肝，见证于肾。大小茴各一两为末，猪胞一个，连尿入药，酒煮烂，为丸服。
 
-**【讲解】**（1）丹田：道家称人身脐下三寸为丹田，是男于精室，女子胞宫所在之处。（2）阴肿：即阴囊肿大**。**
+**【讲解】**（1）丹田：道家称人身脐下三寸为丹田，是男子精室，女子胞宫所在之处。（2）阴肿：即阴囊肿大**。**
 
-**小茴香疏肝理气，暖肾散寒，且能止痛。八角茴香（又名大茴香）作用与小茴香相似，而药力较逊，并多作食物调味品便用**。小茴香为伞形科多年生草本植物茴香的成熟果实。《药性论》称蘹香，《宋氏集验医方》称大茴香。至于《备要》称大如麦粒，轻而有棱者名大茴，出宁夏，他处小者名小茴。此两者为一植物，即今之小茴香。我国各地均有栽培。而今之大茴香，即八角茴查，系木兰科常绿小乔木八角茴香树的果实，产于亚热带地区，古时大多进口，现我国广东、广西、云南等地亦有种植。临床少用，大多作调味品，古俗称“大料”。小茴以药用为主，生用，或盐水炒用。
+**小茴香疏肝理气，暖肾散寒，且能止痛。八角茴香（又名大茴香）作用与小茴香相似，而药力较逊，并多作食物调味品使用**。小茴香为伞形科多年生草本植物茴香的成熟果实。《药性论》称蘹香，《宋氏集验医方》称大茴香。至于《备要》称大如麦粒，轻而有棱者名大茴，出宁夏，他处小者名小茴。此两者为一植物，即今之小茴香。我国各地均有栽培。而今之大茴香，即八角茴香，系木兰科常绿小乔木八角茴香树的果实，产于亚热带地区，古时大多进口，现我国广东、广西、云南等地亦有种植。临床少用，大多作调味品，古俗称“大料”。小茴以药用为主，生用，或盐水炒用。
 
 同属植物莽草的果实，形状与八角茴香非常相似，极易混淆。莽草果实有毒，不可误用。其主要区别点为：莽草果实较小，蓇葖一般长约7—10毫米，其尖端呈向上弯曲之鸟喙状，带树胶样气味，味苦。
 
