update ok/bc/bc05-0.0.8.0.0.md. ”水肿浮肿“改为”水肿浮大“

--- a/ok/bc/bc05-0.0.8.0.0.md
+++ b/ok/bc/bc05-0.0.8.0.0.md
@@ -1,6 +1,6 @@
 ### 木通
 
-〔原文〕**甘淡轻虚。上通心包，降心火，清肺热，**<small>心火降，则肺热清矣。</small>**化津液，**<small>肺为水源，肺热清，则津液化，水道通。</small>**下通大小肠膀胱，导诸湿热由小便出，**<small>故导赤散用之。凡利小便者，多不利大便，以小水愈通，大便愈燥也。木通能入大肠，兼通大便。</small>**通利九窍，血脉关节。治胸中烦热，遍身拘痛，**<small>杨仁斋曰：遍身隐热疼痛，拘急足冷，皆伏热伤血。血属于心，宜木通以通心窍，则经络流行也。</small>**大渴引饮，**<small>中焦火。</small>**淋沥不通，**<small>下焦火。心与小肠相表里，心移热于小肠，则淋秘。</small>**水肿浮肿，**<small>利小便。</small>**耳聋**<small>泄肾火，通窍。</small>**目眩，口燥舌干，**<small>舌为心苗。</small>**喉痹咽痛，**<small>火炎上焦。</small>**鼻齆**（1）<small>热壅清道，则气窒不通。</small>**失音，**<small>清金。</small>**脾热好眠**。<small>脾主四肢，倦则好眠。心为脾母，心热清，脾热亦除。</small>**除烦退热，止痛排脓，破血催生，行经下乳。**<small>火不亢于内，气顺血行，故经调有准，乳汁循常。</small>**汗多者禁用。**<small>东垣曰：肺热有邪，津液气化之源绝，则寒水断流；膀胱受湿热，癃闭约束，则小便不利，宜此治之。寒水，太阳膀胱也。朱二允曰：火在上则口燥眼赤鼻干，在中则心烦呕哕浮肿，在下则淋秘足肿，必借此甘平之性，泻诸经之火，火退则小便自利，便利则诸经火邪皆从小水而下降矣。君火宜木通，相火宜泽泻，利水虽同，所用各别。</small>**藤有细孔，两头皆通。**<small>故通窍。</small>
+〔原文〕**甘淡轻虚。上通心包，降心火，清肺热，**<small>心火降，则肺热清矣。</small>**化津液，**<small>肺为水源，肺热清，则津液化，水道通。</small>**下通大小肠膀胱，导诸湿热由小便出，**<small>故导赤散用之。凡利小便者，多不利大便，以小水愈通，大便愈燥也。木通能入大肠，兼通大便。</small>**通利九窍，血脉关节。治胸中烦热，遍身拘痛，**<small>杨仁斋曰：遍身隐热疼痛，拘急足冷，皆伏热伤血。血属于心，宜木通以通心窍，则经络流行也。</small>**大渴引饮，**<small>中焦火。</small>**淋沥不通，**<small>下焦火。心与小肠相表里，心移热于小肠，则淋秘。</small>**水肿浮大，**<small>利小便。</small>**耳聋**<small>泄肾火，通窍。</small>**目眩，口燥舌干，**<small>舌为心苗。</small>**喉痹咽痛，**<small>火炎上焦。</small>**鼻齆**（1）<small>热壅清道，则气窒不通。</small>**失音，**<small>清金。</small>**脾热好眠**。<small>脾主四肢，倦则好眠。心为脾母，心热清，脾热亦除。</small>**除烦退热，止痛排脓，破血催生，行经下乳。**<small>火不亢于内，气顺血行，故经调有准，乳汁循常。</small>**汗多者禁用。**<small>东垣曰：肺热有邪，津液气化之源绝，则寒水断流；膀胱受湿热，癃闭约束，则小便不利，宜此治之。寒水，太阳膀胱也。朱二允曰：火在上则口燥眼赤鼻干，在中则心烦呕哕浮肿，在下则淋秘足肿，必借此甘平之性，泻诸经之火，火退则小便自利，便利则诸经火邪皆从小水而下降矣。君火宜木通，相火宜泽泻，利水虽同，所用各别。</small>**藤有细孔，两头皆通。**<small>故通窍。</small>
 
 【讲解】（1）鼻齆：齆（wèng瓮），鼻塞不知香臭，发音不清。
 
